@@ -24,6 +24,7 @@ import org.objectweb.asm.ClassReader;
 import org.objectweb.asm.ClassVisitor;
 
 import io.quarkus.gizmo.Gizmo;
+import io.quarkus.paths.PathCollection;
 
 public class JavaCompilationProvider implements CompilationProvider {
 
@@ -33,6 +34,7 @@ public class JavaCompilationProvider implements CompilationProvider {
     // -parameters is used to generate metadata for reflection on method parameters
     // this is useful when people using debuggers against their hot-reloaded app
     private static final Set<String> COMPILER_OPTIONS = new HashSet<>(Arrays.asList("-g", "-parameters"));
+    private static final Set<String> IGNORE_NAMESPACES = new HashSet<>(Collections.singletonList("org.osgi"));
 
     JavaCompiler compiler;
     StandardJavaFileManager fileManager;
@@ -63,27 +65,26 @@ public class JavaCompilationProvider implements CompilationProvider {
             fileManager.setLocation(StandardLocation.CLASS_OUTPUT, Collections.singleton(context.getOutputDirectory()));
 
             CompilerFlags compilerFlags = new CompilerFlags(COMPILER_OPTIONS, context.getCompilerOptions(),
-                    context.getSourceJavaVersion(), context.getTargetJvmVersion());
+                    context.getReleaseJavaVersion(), context.getSourceJavaVersion(), context.getTargetJvmVersion());
 
             Iterable<? extends JavaFileObject> sources = fileManager.getJavaFileObjectsFromFiles(filesToCompile);
             JavaCompiler.CompilationTask task = compiler.getTask(null, fileManager, diagnostics,
                     compilerFlags.toList(), null, sources);
 
             if (!task.call()) {
-                throw new RuntimeException("Compilation failed" + diagnostics.getDiagnostics());
+                StringBuilder sb = new StringBuilder("\u001B[91mCompilation Failed:");
+                for (Diagnostic<? extends JavaFileObject> i : diagnostics.getDiagnostics()) {
+                    sb.append("\n");
+                    sb.append(i.toString());
+                }
+                sb.append("\u001b[0m");
+                throw new RuntimeException(sb.toString());
             }
 
-            for (Diagnostic<? extends JavaFileObject> diagnostic : diagnostics.getDiagnostics()) {
-                log.logf(diagnostic.getKind() == Diagnostic.Kind.ERROR ? Logger.Level.ERROR : Logger.Level.WARN,
-                        "%s, line %d in %s", diagnostic.getMessage(null), diagnostic.getLineNumber(),
-                        diagnostic.getSource() == null ? "[unknown source]" : diagnostic.getSource().getName());
-            }
+            logDiagnostics(diagnostics);
+
             if (!fileManagerDiagnostics.getDiagnostics().isEmpty()) {
-                for (Diagnostic<? extends JavaFileObject> diagnostic : fileManagerDiagnostics.getDiagnostics()) {
-                    log.logf(diagnostic.getKind() == Diagnostic.Kind.ERROR ? Logger.Level.ERROR : Logger.Level.WARN,
-                            "%s, line %d in %s", diagnostic.getMessage(null), diagnostic.getLineNumber(),
-                            diagnostic.getSource() == null ? "[unknown source]" : diagnostic.getSource().getName());
-                }
+                logDiagnostics(fileManagerDiagnostics);
                 fileManager.close();
                 fileManagerDiagnostics = null;
                 fileManager = null;
@@ -94,7 +95,7 @@ public class JavaCompilationProvider implements CompilationProvider {
     }
 
     @Override
-    public Path getSourcePath(Path classFilePath, Set<String> sourcePaths, String classesPath) {
+    public Path getSourcePath(Path classFilePath, PathCollection sourcePaths, String classesPath) {
         Path sourceFilePath = null;
         final RuntimeUpdatesClassVisitor visitor = new RuntimeUpdatesClassVisitor(sourcePaths, classesPath);
         try (final InputStream inputStream = Files.newInputStream(classFilePath)) {
@@ -116,12 +117,34 @@ public class JavaCompilationProvider implements CompilationProvider {
         }
     }
 
+    private void logDiagnostics(final DiagnosticCollector<JavaFileObject> diagnostics) {
+        for (Diagnostic<? extends JavaFileObject> diagnostic : diagnostics.getDiagnostics()) {
+            Logger.Level level = diagnostic.getKind() == Diagnostic.Kind.ERROR ? Logger.Level.ERROR : Logger.Level.WARN;
+            String message = diagnostic.getMessage(null);
+            if (level.equals(Logger.Level.WARN) && ignoreWarningForNamespace(message)) {
+                continue;
+            }
+
+            log.logf(level, "%s, line %d in %s", message, diagnostic.getLineNumber(),
+                    diagnostic.getSource() == null ? "[unknown source]" : diagnostic.getSource().getName());
+        }
+    }
+
+    private static boolean ignoreWarningForNamespace(String message) {
+        for (String ignoreNamespace : IGNORE_NAMESPACES) {
+            if (message.contains(ignoreNamespace)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     static class RuntimeUpdatesClassVisitor extends ClassVisitor {
-        private Set<String> sourcePaths;
-        private String classesPath;
+        private final PathCollection sourcePaths;
+        private final String classesPath;
         private String sourceFile;
 
-        public RuntimeUpdatesClassVisitor(Set<String> sourcePaths, String classesPath) {
+        public RuntimeUpdatesClassVisitor(PathCollection sourcePaths, String classesPath) {
             super(Gizmo.ASM_API_VERSION);
             this.sourcePaths = sourcePaths;
             this.classesPath = classesPath;
@@ -133,14 +156,13 @@ public class JavaCompilationProvider implements CompilationProvider {
         }
 
         public Path getSourceFileForClass(final Path classFilePath) {
-            for (String moduleSourcePath : sourcePaths) {
-                final Path sourcesDir = Paths.get(moduleSourcePath);
+            for (Path sourcesDir : sourcePaths) {
                 final Path classesDir = Paths.get(classesPath);
                 final StringBuilder sourceRelativeDir = new StringBuilder();
                 sourceRelativeDir.append(classesDir.relativize(classFilePath.getParent()));
                 sourceRelativeDir.append(File.separator);
                 sourceRelativeDir.append(sourceFile);
-                final Path sourceFilePath = sourcesDir.resolve(Paths.get(sourceRelativeDir.toString()));
+                final Path sourceFilePath = sourcesDir.resolve(Path.of(sourceRelativeDir.toString()));
                 if (Files.exists(sourceFilePath)) {
                     return sourceFilePath;
                 }
