@@ -4,12 +4,15 @@ import static io.quarkus.gizmo.MethodDescriptor.ofConstructor;
 import static io.quarkus.gizmo.MethodDescriptor.ofMethod;
 
 import java.io.Closeable;
+import java.lang.annotation.Annotation;
 import java.lang.reflect.Array;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import java.lang.reflect.Parameter;
+import java.lang.reflect.Proxy;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.time.Duration;
@@ -38,6 +41,8 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import javax.inject.Inject;
+
 import org.jboss.jandex.AnnotationValue;
 import org.jboss.jandex.ArrayType;
 import org.jboss.jandex.ClassInfo;
@@ -45,6 +50,7 @@ import org.jboss.jandex.MethodInfo;
 import org.jboss.jandex.Type;
 import org.wildfly.common.Assert;
 
+import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.deployment.proxy.ProxyConfiguration;
 import io.quarkus.deployment.proxy.ProxyFactory;
 import io.quarkus.deployment.recording.AnnotationProxyProvider.AnnotationProxy;
@@ -110,6 +116,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
     private final Map<Class<?>, ProxyFactory<?>> returnValueProxy = new ConcurrentHashMap<>();
 
     private final Map<Class<?>, Object> existingProxyClasses = new ConcurrentHashMap<>();
+    private final Map<Class<?>, NewRecorder> existingRecorderValues = new ConcurrentHashMap<>();
     private final List<BytecodeInstruction> storedMethodCalls = new ArrayList<>();
 
     private final IdentityHashMap<Class<?>, String> classProxies = new IdentityHashMap<>();
@@ -119,8 +126,11 @@ public class BytecodeRecorderImpl implements RecorderContext {
 
     private final Function<ClassOutput, ClassCreator> classCreatorFunction;
     private final Function<ClassCreator, MethodCreator> methodCreatorFunction;
+    private final Function<java.lang.reflect.Type, Object> configCreatorFunction;
 
     private final List<ObjectLoader> loaders = new ArrayList<>();
+    private final Set<Class> classesToUseRecorableConstructor = new HashSet<>();
+    private final boolean useIdentityComparison;
 
     /**
      * the maximum number of instruction groups that can be added to a method. This is to limit the size of the method
@@ -134,7 +144,13 @@ public class BytecodeRecorderImpl implements RecorderContext {
     private int deferredParameterCount = 0;
     private boolean loadComplete;
 
-    public BytecodeRecorderImpl(boolean staticInit, String buildStepName, String methodName, String uniqueHash) {
+    public BytecodeRecorderImpl(boolean staticInit, String buildStepName, String methodName, String uniqueHash,
+            boolean useIdentityComparison) {
+        this(staticInit, buildStepName, methodName, uniqueHash, useIdentityComparison, (s) -> null);
+    }
+
+    public BytecodeRecorderImpl(boolean staticInit, String buildStepName, String methodName, String uniqueHash,
+            boolean useIdentityComparison, Function<java.lang.reflect.Type, Object> configCreatorFunction) {
         this(
                 Thread.currentThread().getContextClassLoader(),
                 staticInit,
@@ -144,7 +160,40 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 },
                 classCreator -> {
                     return startupMethodCreator(buildStepName, methodName, classCreator);
+                }, useIdentityComparison, configCreatorFunction);
+    }
+
+    // visible for testing
+    BytecodeRecorderImpl(ClassLoader classLoader, boolean staticInit, String className) {
+        this(classLoader, staticInit, className,
+                classOutput -> {
+                    return startupTaskClassCreator(classOutput, className);
+                },
+                classCreator -> {
+                    return startupMethodCreator(null, null, classCreator);
+                }, true, s -> {
+                    try {
+                        if (s instanceof Class) {
+                            return ((Class<?>) s).newInstance();
+                        }
+                        throw new RuntimeException("Not implemented for testing");
+                    } catch (Exception e) {
+                        throw new RuntimeException(e);
+                    }
                 });
+    }
+
+    private BytecodeRecorderImpl(ClassLoader classLoader, boolean staticInit, String className,
+            Function<ClassOutput, ClassCreator> classCreatorFunction,
+            Function<ClassCreator, MethodCreator> methodCreatorFunction, boolean useIdentityComparison,
+            Function<java.lang.reflect.Type, Object> configCreatorFunction) {
+        this.classLoader = classLoader;
+        this.staticInit = staticInit;
+        this.className = className;
+        this.classCreatorFunction = classCreatorFunction;
+        this.methodCreatorFunction = methodCreatorFunction;
+        this.useIdentityComparison = useIdentityComparison;
+        this.configCreatorFunction = configCreatorFunction;
     }
 
     private static MethodCreator startupMethodCreator(String buildStepName, String methodName, ClassCreator classCreator) {
@@ -167,34 +216,13 @@ public class BytecodeRecorderImpl implements RecorderContext {
         return BASE_PACKAGE + buildStepName + "$" + methodName + uniqueHash;
     }
 
-    // visible for testing
-    BytecodeRecorderImpl(ClassLoader classLoader, boolean staticInit, String className) {
-        this(classLoader, staticInit, className,
-                classOutput -> {
-                    return startupTaskClassCreator(classOutput, className);
-                },
-                classCreator -> {
-                    return startupMethodCreator(null, null, classCreator);
-                });
-    }
-
-    public BytecodeRecorderImpl(ClassLoader classLoader, boolean staticInit, String className,
-            Function<ClassOutput, ClassCreator> classCreatorFunction,
-            Function<ClassCreator, MethodCreator> methodCreatorFunction) {
-        this.classLoader = classLoader;
-        this.staticInit = staticInit;
-        this.className = className;
-        this.classCreatorFunction = classCreatorFunction;
-        this.methodCreatorFunction = methodCreatorFunction;
-    }
-
     public boolean isEmpty() {
         return storedMethodCalls.isEmpty();
     }
 
     @Override
     public <F, T> void registerSubstitution(Class<F> from, Class<T> to,
-            Class<? extends ObjectSubstitution<F, T>> substitution) {
+            Class<? extends ObjectSubstitution<? super F, ? super T>> substitution) {
         substitutions.put(from, new SubstitutionHolder(from, to, substitution));
     }
 
@@ -279,6 +307,8 @@ public class BytecodeRecorderImpl implements RecorderContext {
         if (existingProxyClasses.containsKey(theClass)) {
             return theClass.cast(existingProxyClasses.get(theClass));
         }
+        NewRecorder newRecorder = new NewRecorder(theClass);
+        existingRecorderValues.put(theClass, newRecorder);
 
         InvocationHandler invocationHandler = new InvocationHandler() {
             @Override
@@ -299,7 +329,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 storedMethodCalls.add(storedMethodCall);
                 Class<?> returnType = method.getReturnType();
                 if (method.getName().equals("toString")
-                        && method.getParameterTypes().length == 0
+                        && method.getParameterCount() == 0
                         && returnType.equals(String.class)) {
                     return proxy.getClass().getName();
                 }
@@ -339,10 +369,23 @@ public class BytecodeRecorderImpl implements RecorderContext {
             T recordingProxy = factory.newInstance(invocationHandler);
             existingProxyClasses.put(theClass, recordingProxy);
             recordingProxyFactories.put(theClass, factory);
+
+            if (theClass.getClassLoader() instanceof QuarkusClassLoader) {
+                ((QuarkusClassLoader) theClass.getClassLoader()).addCloseTask(new Runnable() {
+                    @Override
+                    public void run() {
+                        recordingProxyFactories.remove(theClass);
+                    }
+                });
+            }
             return recordingProxy;
         } catch (IllegalAccessException | InstantiationException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    public void markClassAsConstructorRecordable(Class<?> clazz) {
+        classesToUseRecorableConstructor.add(clazz);
     }
 
     private ProxyInstance getProxyInstance(Class<?> returnType) throws InstantiationException, IllegalAccessException {
@@ -373,9 +416,20 @@ public class BytecodeRecorderImpl implements RecorderContext {
                     return staticInit;
                 }
                 if (method.getName().equals("toString")
-                        && method.getParameterTypes().length == 0
+                        && method.getParameterCount() == 0
                         && method.getReturnType().equals(String.class)) {
                     return "Runtime proxy of " + returnType + " with id " + key;
+                }
+                if (method.getName().equals("hashCode")
+                        && method.getParameterCount() == 0
+                        && method.getReturnType().equals(int.class)) {
+                    return System.identityHashCode(proxy);
+                }
+                if (method.getName().equals("equals")
+                        && method.getParameterCount() == 1
+                        && method.getParameterTypes()[0] == Object.class
+                        && method.getReturnType().equals(boolean.class)) {
+                    return proxy == args[0];
                 }
                 throw new RuntimeException(
                         "You cannot invoke " + method.getName()
@@ -403,7 +457,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
         //now create instances of all the classes we invoke on and store them in variables as well
         Map<Class, DeferredArrayStoreParameter> classInstanceVariables = new HashMap<>();
 
-        Map<Object, DeferredParameter> parameterMap = new IdentityHashMap<>();
+        Map<Object, DeferredParameter> parameterMap = useIdentityComparison ? new IdentityHashMap<>() : new HashMap<>();
 
         //THIS IS FAIRLY COMPLEX
         //the simple approach of just writing out the serialized invocations and method parameters as they are needed
@@ -425,13 +479,14 @@ public class BytecodeRecorderImpl implements RecorderContext {
 
         //the first step is to create list of all these values that need to be placed into the array. We do that
         //here, as well as creating the recorder instances (and also preparing them to be stored in the array)
+
         for (BytecodeInstruction set : storedMethodCalls) {
             if (set instanceof StoredMethodCall) {
                 StoredMethodCall call = (StoredMethodCall) set;
                 if (!classInstanceVariables.containsKey(call.theClass)) {
                     //this is a new recorder, create a deferred value that will allocate an array position for
                     //the recorder
-                    DeferredArrayStoreParameter value = new DeferredArrayStoreParameter() {
+                    DeferredArrayStoreParameter value = new DeferredArrayStoreParameter(null, call.theClass) {
                         @Override
                         ResultHandle createValue(MethodContext context, MethodCreator method, ResultHandle array) {
                             return method.newInstance(ofConstructor(call.theClass));
@@ -443,9 +498,11 @@ public class BytecodeRecorderImpl implements RecorderContext {
                     //for every parameter that was passed into the method we create a deferred value
                     //this will allocate a space in the array, so the value can be deserialized correctly
                     //even if the code for an invocation is split over several methods
+                    Class<?>[] parameterTypes = call.method.getParameterTypes();
+                    Annotation[][] parameterAnnotations = call.method.getParameterAnnotations();
                     for (int i = 0; i < call.parameters.length; ++i) {
                         call.deferredParameters[i] = loadObjectInstance(call.parameters[i], parameterMap,
-                                call.method.getParameterTypes()[i], Arrays.stream(call.method.getParameterAnnotations()[i])
+                                parameterTypes[i], Arrays.stream(parameterAnnotations[i])
                                         .anyMatch(s -> s.annotationType() == RelaxedValidation.class));
                     }
                 } catch (Exception e) {
@@ -453,11 +510,13 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 }
             }
         }
+        for (var e : existingRecorderValues.entrySet()) {
+            e.getValue().preWrite();
+        }
 
         //when this is true it is no longer possible to allocate items in the array. this is a guard against programmer error
-
         loadComplete = true;
-        //now we know know many items we have, create the array
+        //now we now know many items we have, create the array
         ResultHandle array = mainMethod.newArray(Object.class, deferredParameterCount);
 
         //this context manages the creation of new methods
@@ -465,6 +524,9 @@ public class BytecodeRecorderImpl implements RecorderContext {
         //allocates a new method
         SplitMethodContext context = new SplitMethodContext(array, mainMethod, file);
 
+        for (var i : this.existingRecorderValues.values()) {
+            i.prepare(context);
+        }
         //now we invoke the actual method call
         for (BytecodeInstruction set : storedMethodCalls) {
 
@@ -479,7 +541,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                     //it into a single method
                     call.deferredParameters[i].prepare(context);
                 }
-                final DeferredArrayStoreParameter recorderInstance = classInstanceVariables.get(call.theClass);
+                final DeferredArrayStoreParameter recorderInstance = existingRecorderValues.get(call.theClass);
                 recorderInstance.prepare(context);
                 //write the method invocation. Everything in the instruction group is scoped to a single method
                 context.writeInstruction(new InstructionGroup() {
@@ -585,11 +647,11 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 holder = substitutions.get(expectedType);
             }
             try {
-                ObjectSubstitution substitution = holder.sub.newInstance();
+                ObjectSubstitution substitution = holder.sub.getDeclaredConstructor().newInstance();
                 Object res = substitution.serialize(param);
                 DeferredParameter serialized = loadObjectInstance(res, existing, holder.to, relaxedValidation);
                 SubstitutionHolder finalHolder = holder;
-                return new DeferredArrayStoreParameter() {
+                return new DeferredArrayStoreParameter(param, expectedType) {
 
                     @Override
                     void doPrepare(MethodContext context) {
@@ -614,7 +676,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
             Optional val = (Optional) param;
             if (val.isPresent()) {
                 DeferredParameter res = loadObjectInstance(val.get(), existing, Object.class, relaxedValidation);
-                return new DeferredArrayStoreParameter() {
+                return new DeferredArrayStoreParameter(param, expectedType) {
 
                     @Override
                     void doPrepare(MethodContext context) {
@@ -632,7 +694,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                     }
                 };
             } else {
-                return new DeferredArrayStoreParameter() {
+                return new DeferredArrayStoreParameter(param, expectedType) {
                     @Override
                     ResultHandle createValue(MethodContext context, MethodCreator method, ResultHandle array) {
                         return method.invokeStaticMethod(ofMethod(Optional.class, "empty", Optional.class));
@@ -647,22 +709,6 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((String) param);
-                }
-            };
-        } else if (param instanceof Integer) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Integer.class, "valueOf", Integer.class, int.class),
-                            method.load((Integer) param));
-                }
-            };
-        } else if (param instanceof Boolean) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Boolean.class, "valueOf", Boolean.class, boolean.class),
-                            method.load((Boolean) param));
                 }
             };
         } else if (param instanceof URL) {
@@ -747,124 +793,60 @@ public class BytecodeRecorderImpl implements RecorderContext {
                     }
                 };
             }
-        } else if (expectedType == boolean.class) {
+        } else if (expectedType == boolean.class || expectedType == Boolean.class || param instanceof Boolean) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((boolean) param);
                 }
             };
-        } else if (expectedType == Boolean.class) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Boolean.class, "valueOf", Boolean.class, boolean.class),
-                            method.load((boolean) param));
-                }
-            };
-        } else if (expectedType == int.class) {
+        } else if (expectedType == int.class || expectedType == Integer.class || param instanceof Integer) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((int) param);
                 }
             };
-        } else if (expectedType == Integer.class) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Integer.class, "valueOf", Integer.class, int.class),
-                            method.load((int) param));
-                }
-            };
-        } else if (expectedType == short.class) {
+        } else if (expectedType == short.class || expectedType == Short.class || param instanceof Short) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((short) param);
                 }
             };
-        } else if (expectedType == Short.class || param instanceof Short) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Short.class, "valueOf", Short.class, short.class),
-                            method.load((short) param));
-                }
-            };
-        } else if (expectedType == byte.class) {
+        } else if (expectedType == byte.class || expectedType == Byte.class || param instanceof Byte) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((byte) param);
                 }
             };
-        } else if (expectedType == Byte.class || param instanceof Byte) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Byte.class, "valueOf", Byte.class, byte.class),
-                            method.load((byte) param));
-                }
-            };
-        } else if (expectedType == char.class) {
+        } else if (expectedType == char.class || expectedType == Character.class || param instanceof Character) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((char) param);
                 }
             };
-        } else if (expectedType == Character.class || param instanceof Character) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Character.class, "valueOf", Character.class, char.class),
-                            method.load((char) param));
-                }
-            };
-        } else if (expectedType == long.class) {
+        } else if (expectedType == long.class || expectedType == Long.class || param instanceof Long) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((long) param);
                 }
             };
-        } else if (expectedType == Long.class || param instanceof Long) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Long.class, "valueOf", Long.class, long.class),
-                            method.load((long) param));
-                }
-            };
-        } else if (expectedType == float.class) {
+        } else if (expectedType == float.class || expectedType == Float.class || param instanceof Float) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((float) param);
                 }
             };
-        } else if (expectedType == Float.class || param instanceof Float) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Float.class, "valueOf", Float.class, float.class),
-                            method.load((float) param));
-                }
-            };
-        } else if (expectedType == double.class) {
+        } else if (expectedType == double.class || expectedType == Double.class || param instanceof Double) {
             return new DeferredParameter() {
                 @Override
                 ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
                     return method.load((double) param);
-                }
-            };
-        } else if (expectedType == Double.class || param instanceof Double) {
-            return new DeferredParameter() {
-                @Override
-                ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-                    return method.invokeStaticMethod(ofMethod(Double.class, "valueOf", Double.class, double.class),
-                            method.load((double) param));
                 }
             };
         } else if (expectedType.isArray()) {
@@ -876,7 +858,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                         expectedType.getComponentType(), relaxedValidation);
                 components[i] = component;
             }
-            return new DeferredArrayStoreParameter() {
+            return new DeferredArrayStoreParameter(param, expectedType) {
 
                 @Override
                 void doPrepare(MethodContext context) {
@@ -934,7 +916,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                     constructorParamsHandles[iterator.previousIndex()] = retValue;
                 }
             }
-            return new DeferredArrayStoreParameter() {
+            return new DeferredArrayStoreParameter(annotationProxy.getAnnotationLiteralType()) {
                 @Override
                 ResultHandle createValue(MethodContext context, MethodCreator method, ResultHandle array) {
                     MethodDescriptor constructor = MethodDescriptor.ofConstructor(annotationProxy.getAnnotationLiteralType(),
@@ -1103,8 +1085,8 @@ public class BytecodeRecorderImpl implements RecorderContext {
         //a list of steps that are performed on the object after it has been created
         //we need to create all these first, to ensure the required objects have already
         //been deserialized
-        List<SerialzationStep> setupSteps = new ArrayList<>();
-        List<SerialzationStep> ctorSetupSteps = new ArrayList<>();
+        List<SerializationStep> setupSteps = new ArrayList<>();
+        List<SerializationStep> ctorSetupSteps = new ArrayList<>();
 
         boolean relaxedOk = false;
         if (param instanceof Collection) {
@@ -1113,7 +1095,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 DeferredParameter val = i != null
                         ? loadObjectInstance(i, existing, i.getClass(), relaxedValidation)
                         : loadObjectInstance(null, existing, Object.class, relaxedValidation);
-                setupSteps.add(new SerialzationStep() {
+                setupSteps.add(new SerializationStep() {
                     @Override
                     public void handle(MethodContext context, MethodCreator method, DeferredArrayStoreParameter out) {
                         //each step can happen in a new method, so it is safe to do this
@@ -1136,7 +1118,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                 DeferredParameter val = i.getValue() != null
                         ? loadObjectInstance(i.getValue(), existing, i.getValue().getClass(), relaxedValidation)
                         : loadObjectInstance(null, existing, Object.class, relaxedValidation);
-                setupSteps.add(new SerialzationStep() {
+                setupSteps.add(new SerializationStep() {
                     @Override
                     public void handle(MethodContext context, MethodCreator method, DeferredArrayStoreParameter out) {
                         method.invokeInterfaceMethod(MAP_PUT, context.loadDeferred(out), context.loadDeferred(key),
@@ -1169,19 +1151,47 @@ public class BytecodeRecorderImpl implements RecorderContext {
             }
             int count = 0;
             nonDefaultConstructorHandles = new DeferredParameter[params.size()];
+            Class<?>[] parameterTypes = nonDefaultConstructorHolder.constructor.getParameterTypes();
             for (int i = 0; i < params.size(); i++) {
                 Object obj = params.get(i);
                 nonDefaultConstructorHandles[i] = loadObjectInstance(obj, existing,
-                        nonDefaultConstructorHolder.constructor.getParameterTypes()[count++], relaxedValidation);
+                        parameterTypes[count++], relaxedValidation);
+            }
+        } else if (classesToUseRecorableConstructor.contains(param.getClass())) {
+            Constructor<?> current = null;
+            int count = 0;
+            for (var c : param.getClass().getConstructors()) {
+                if (current == null || current.getParameterCount() < c.getParameterCount()) {
+                    current = c;
+                    count = 0;
+                } else if (current != null && current.getParameterCount() == c.getParameterCount()) {
+                    count++;
+                }
+            }
+            if (current == null || count > 0) {
+                throw new RuntimeException("Unable to determine the recordable constructor to use for " + param.getClass());
+            }
+            nonDefaultConstructorHolder = new NonDefaultConstructorHolder(current, null);
+            nonDefaultConstructorHandles = new DeferredParameter[current.getParameterCount()];
+            if (current.getParameterCount() > 0) {
+                Parameter[] parameters = current.getParameters();
+                for (int i = 0; i < current.getParameterCount(); ++i) {
+                    String name = parameters[i].getName();
+                    constructorParamNameMap.put(name, i);
+                }
             }
         } else {
             for (Constructor<?> ctor : param.getClass().getConstructors()) {
                 if (ctor.isAnnotationPresent(RecordableConstructor.class)) {
                     nonDefaultConstructorHolder = new NonDefaultConstructorHolder(ctor, null);
                     nonDefaultConstructorHandles = new DeferredParameter[ctor.getParameterCount()];
-                    for (int i = 0; i < ctor.getParameterCount(); ++i) {
-                        String name = ctor.getParameters()[i].getName();
-                        constructorParamNameMap.put(name, i);
+
+                    if (ctor.getParameterCount() > 0) {
+                        Parameter[] ctorParameters = ctor.getParameters();
+                        for (int i = 0; i < ctor.getParameterCount(); ++i) {
+                            String name = ctorParameters[i].getName();
+                            constructorParamNameMap.put(name, i);
+                        }
                     }
                     break;
                 }
@@ -1191,17 +1201,19 @@ public class BytecodeRecorderImpl implements RecorderContext {
         Set<String> handledProperties = new HashSet<>();
         Property[] desc = PropertyUtils.getPropertyDescriptors(param);
         for (Property i : desc) {
-            // check if the getter is ignored
-            if ((i.getReadMethod() != null) && (i.getReadMethod().getAnnotation(IgnoreProperty.class) != null)) {
-                continue;
-            }
-            // check if the matching field is ignored
-            try {
-                if (param.getClass().getDeclaredField(i.getName()).getAnnotation(IgnoreProperty.class) != null) {
+            if (!i.getDeclaringClass().getPackageName().startsWith("java.")) {
+                // check if the getter is ignored
+                if ((i.getReadMethod() != null) && (i.getReadMethod().getAnnotation(IgnoreProperty.class) != null)) {
                     continue;
                 }
-            } catch (NoSuchFieldException ignored) {
+                // check if the matching field is ignored
+                try {
+                    if (param.getClass().getDeclaredField(i.getName()).getAnnotation(IgnoreProperty.class) != null) {
+                        continue;
+                    }
+                } catch (NoSuchFieldException ignored) {
 
+                }
             }
             Integer ctorParamIndex = constructorParamNameMap.remove(i.name);
             if (i.getReadMethod() != null && i.getWriteMethod() == null && ctorParamIndex == null) {
@@ -1219,9 +1231,8 @@ public class BytecodeRecorderImpl implements RecorderContext {
                             for (Object c : propertyValue) {
                                 DeferredParameter toAdd = loadObjectInstance(c, existing, Object.class, relaxedValidation);
                                 params.add(toAdd);
-
                             }
-                            setupSteps.add(new SerialzationStep() {
+                            setupSteps.add(new SerializationStep() {
                                 @Override
                                 public void handle(MethodContext context, MethodCreator method,
                                         DeferredArrayStoreParameter out) {
@@ -1261,7 +1272,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                                         relaxedValidation);
                                 def.put(key, val);
                             }
-                            setupSteps.add(new SerialzationStep() {
+                            setupSteps.add(new SerializationStep() {
                                 @Override
                                 public void handle(MethodContext context, MethodCreator method,
                                         DeferredArrayStoreParameter out) {
@@ -1311,33 +1322,42 @@ public class BytecodeRecorderImpl implements RecorderContext {
                         continue;
                     }
                     Class propertyType = i.getPropertyType();
-                    if (ctorParamIndex == null
-                            && i.getReadMethod().getReturnType() != i.getWriteMethod().getParameterTypes()[0]) {
-                        if (relaxedValidation) {
-                            //this is a weird situation where the reader and writer are different types
-                            //we iterate and try and find a valid setter method for the type we have
-                            //OpenAPI does some weird stuff like this
+                    if (ctorParamIndex == null) {
+                        Class<?> getterReturnType = i.getReadMethod().getReturnType();
+                        Class<?> setterParameterType = i.getWriteMethod().getParameterTypes()[0];
+                        if (getterReturnType != setterParameterType) {
+                            if (relaxedValidation) {
+                                //this is a weird situation where the reader and writer are different types
+                                //we iterate and try and find a valid setter method for the type we have
+                                //OpenAPI does some weird stuff like this
 
-                            for (Method m : param.getClass().getMethods()) {
-                                if (m.getName().equals(i.getWriteMethod().getName())) {
-                                    if (m.getParameterTypes().length > 0
-                                            && m.getParameterTypes()[0].isAssignableFrom(param.getClass())) {
-                                        propertyType = m.getParameterTypes()[0];
-                                        break;
+                                for (Method m : param.getClass().getMethods()) {
+                                    if (m.getName().equals(i.getWriteMethod().getName())) {
+                                        if (m.getParameterCount() > 0) {
+                                            Class<?>[] parameterTypes = m.getParameterTypes();
+                                            if (parameterTypes[0].isAssignableFrom(param.getClass())) {
+                                                propertyType = parameterTypes[0];
+                                                break;
+                                            }
+                                        }
                                     }
-                                }
 
+                                }
+                            } else {
+                                throw new RuntimeException("Cannot serialise field '" + i.getName() + "' on object '" + param
+                                        + "' of type '" + param.getClass().getName()
+                                        + "' as getter and setter are of different types. Getter type is '"
+                                        + getterReturnType.getName() + "' while setter type is '"
+                                        + setterParameterType.getName()
+                                        + "'.");
                             }
-                        } else {
-                            throw new RuntimeException("Cannot serialise field " + i.getName() + " on object " + param
-                                    + " as setter and getters were different types");
                         }
                     }
                     DeferredParameter val = loadObjectInstance(propertyValue, existing,
                             i.getPropertyType(), relaxedValidation);
                     if (ctorParamIndex != null) {
                         nonDefaultConstructorHandles[ctorParamIndex] = val;
-                        ctorSetupSteps.add(new SerialzationStep() {
+                        ctorSetupSteps.add(new SerializationStep() {
                             @Override
                             public void handle(MethodContext context, MethodCreator method, DeferredArrayStoreParameter out) {
 
@@ -1350,15 +1370,17 @@ public class BytecodeRecorderImpl implements RecorderContext {
                         });
                     } else {
                         Class finalPropertyType = propertyType;
-                        setupSteps.add(new SerialzationStep() {
+                        setupSteps.add(new SerializationStep() {
                             @Override
                             public void handle(MethodContext context, MethodCreator method, DeferredArrayStoreParameter out) {
+                                ResultHandle object = context.loadDeferred(out);
+                                ResultHandle resultVal = context.loadDeferred(val);
                                 method.invokeVirtualMethod(
                                         ofMethod(param.getClass(), i.getWriteMethod().getName(),
                                                 i.getWriteMethod().getReturnType(),
                                                 finalPropertyType),
-                                        context.loadDeferred(out),
-                                        context.loadDeferred(val));
+                                        object,
+                                        resultVal);
                             }
 
                             @Override
@@ -1389,7 +1411,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                                 relaxedValidation);
                         if (ctorParamIndex != null) {
                             nonDefaultConstructorHandles[ctorParamIndex] = val;
-                            ctorSetupSteps.add(new SerialzationStep() {
+                            ctorSetupSteps.add(new SerializationStep() {
                                 @Override
                                 public void handle(MethodContext context, MethodCreator method,
                                         DeferredArrayStoreParameter out) {
@@ -1402,7 +1424,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
                                 }
                             });
                         } else {
-                            setupSteps.add(new SerialzationStep() {
+                            setupSteps.add(new SerializationStep() {
                                 @Override
                                 public void handle(MethodContext context, MethodCreator method,
                                         DeferredArrayStoreParameter out) {
@@ -1433,7 +1455,7 @@ public class BytecodeRecorderImpl implements RecorderContext {
 
         //create a deferred value to represet the object itself. This allows the creation to be split
         //over multiple methods, which is important if this is a large object
-        DeferredArrayStoreParameter objectValue = new DeferredArrayStoreParameter() {
+        DeferredArrayStoreParameter objectValue = new DeferredArrayStoreParameter(param, expectedType) {
             @Override
             ResultHandle createValue(MethodContext context, MethodCreator method, ResultHandle array) {
                 ResultHandle out;
@@ -1445,24 +1467,34 @@ public class BytecodeRecorderImpl implements RecorderContext {
                             Arrays.stream(finalCtorHandles).map(m -> context.loadDeferred(m))
                                     .toArray(ResultHandle[]::new));
                 } else {
-                    try {
-                        param.getClass().getDeclaredConstructor();
-                        out = method.newInstance(ofConstructor(param.getClass()));
-                    } catch (NoSuchMethodException e) {
-                        //fallback for collection types, such as unmodifiableMap
-                        if (SortedMap.class.isAssignableFrom(expectedType)) {
-                            out = method.newInstance(ofConstructor(TreeMap.class));
-                        } else if (Map.class.isAssignableFrom(expectedType)) {
-                            out = method.newInstance(ofConstructor(LinkedHashMap.class));
-                        } else if (List.class.isAssignableFrom(expectedType)) {
+                    if (List.class.isAssignableFrom(param.getClass()) && expectedType == List.class) {
+                        // list is a common special case, so let's handle it
+                        List listParam = (List) param;
+                        if (listParam.isEmpty()) {
                             out = method.newInstance(ofConstructor(ArrayList.class));
-                        } else if (SortedSet.class.isAssignableFrom(expectedType)) {
-                            out = method.newInstance(ofConstructor(TreeSet.class));
-                        } else if (Set.class.isAssignableFrom(expectedType)) {
-                            out = method.newInstance(ofConstructor(LinkedHashSet.class));
                         } else {
-                            throw new RuntimeException("Unable to serialize objects of type " + param.getClass()
-                                    + " to bytecode as it has no default constructor");
+                            out = method.newInstance(ofConstructor(ArrayList.class, int.class), method.load(listParam.size()));
+                        }
+                    } else {
+                        try {
+                            param.getClass().getDeclaredConstructor();
+                            out = method.newInstance(ofConstructor(param.getClass()));
+                        } catch (NoSuchMethodException e) {
+                            //fallback for collection types, such as unmodifiableMap
+                            if (SortedMap.class.isAssignableFrom(expectedType)) {
+                                out = method.newInstance(ofConstructor(TreeMap.class));
+                            } else if (Map.class.isAssignableFrom(expectedType)) {
+                                out = method.newInstance(ofConstructor(LinkedHashMap.class));
+                            } else if (List.class.isAssignableFrom(expectedType)) {
+                                out = method.newInstance(ofConstructor(ArrayList.class));
+                            } else if (SortedSet.class.isAssignableFrom(expectedType)) {
+                                out = method.newInstance(ofConstructor(TreeSet.class));
+                            } else if (Set.class.isAssignableFrom(expectedType)) {
+                                out = method.newInstance(ofConstructor(LinkedHashSet.class));
+                            } else {
+                                throw new RuntimeException("Unable to serialize objects of type " + param.getClass()
+                                        + " to bytecode as it has no default constructor");
+                            }
                         }
                     }
                 }
@@ -1471,21 +1503,21 @@ public class BytecodeRecorderImpl implements RecorderContext {
         };
 
         //now return the actual deferred parameter that represents the result of construction
-        return new DeferredArrayStoreParameter() {
+        return new DeferredArrayStoreParameter(param, expectedType) {
 
             @Override
             void doPrepare(MethodContext context) {
                 //this is where the object construction happens
                 //first create the actial object
-                for (SerialzationStep i : ctorSetupSteps) {
+                for (SerializationStep i : ctorSetupSteps) {
                     i.prepare(context);
                 }
                 objectValue.prepare(context);
-                for (SerialzationStep i : setupSteps) {
+                for (SerializationStep i : setupSteps) {
                     //then prepare the steps (i.e. creating the values to be placed into this object)
                     i.prepare(context);
                 }
-                for (SerialzationStep i : setupSteps) {
+                for (SerializationStep i : setupSteps) {
                     //now actually run the steps (i.e. actually stick the values into the object)
                     context.writeInstruction(new InstructionGroup() {
                         @Override
@@ -1508,9 +1540,9 @@ public class BytecodeRecorderImpl implements RecorderContext {
     private DeferredParameter findLoaded(final Object param) {
         for (ObjectLoader loader : loaders) {
             if (loader.canHandleObject(param, staticInit)) {
-                return new DeferredArrayStoreParameter() {
+                return new DeferredArrayStoreParameter(param, param.getClass()) {
                     @Override
-                    ResultHandle createValue(MethodContext creator, MethodCreator method, ResultHandle array) {
+                    ResultHandle createValue(MethodContext context, MethodCreator method, ResultHandle array) {
                         return loader.load(method, param, staticInit);
                     }
                 };
@@ -1554,6 +1586,111 @@ public class BytecodeRecorderImpl implements RecorderContext {
             this.theClass = theClass;
             this.returnedProxy = returnedProxy;
             this.proxyId = proxyId;
+        }
+    }
+
+    final class NewRecorder extends DeferredArrayStoreParameter {
+        final Class<?> theClass;
+        final Constructor<?> injectCtor;
+        final List<DeferredParameter> deferredParameters = new ArrayList<>();
+
+        NewRecorder(Class<?> theClass) {
+            super(theClass.getName());
+            this.theClass = theClass;
+            Constructor<?> injectCtor = null;
+            Constructor<?>[] ctors = theClass.getDeclaredConstructors();
+            if (ctors.length == 1) {
+                injectCtor = ctors[0];
+            } else {
+                for (var i : ctors) {
+                    if (i.isAnnotationPresent(Inject.class)) {
+                        if (injectCtor == null) {
+                            injectCtor = i;
+                        } else {
+                            throw new RuntimeException("Multiple @Inject constructors on " + theClass);
+                        }
+                    }
+                }
+                if (injectCtor == null) {
+                    throw new RuntimeException(
+                            "Could not determine constructor for " + theClass + " add @Inject to a constructor");
+                }
+            }
+            this.injectCtor = injectCtor;
+        }
+
+        void preWrite() {
+            if (injectCtor != null) {
+                try {
+                    for (java.lang.reflect.Type param : injectCtor.getGenericParameterTypes()) {
+                        var obj = configCreatorFunction.apply(param);
+                        if (obj instanceof RuntimeValue) {
+                            if (!staticInit) {
+                                var result = findLoaded(((RuntimeValue<?>) obj).getValue());
+                                if (result == null) {
+                                    throw new RuntimeException("Cannot inject object of type " + param);
+                                }
+                                deferredParameters.add(new DeferredParameter() {
+                                    @Override
+                                    void doPrepare(MethodContext context) {
+                                        super.doPrepare(context);
+                                        result.doPrepare(context);
+                                    }
+
+                                    @Override
+                                    ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
+                                        ResultHandle r = result.doLoad(context, method, array);
+                                        return method.newInstance(
+                                                MethodDescriptor.ofConstructor(RuntimeValue.class, Object.class), r);
+                                    }
+                                });
+                            } else {
+                                deferredParameters.add(new DeferredParameter() {
+                                    @Override
+                                    ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
+                                        return method.newInstance(MethodDescriptor.ofConstructor(RuntimeValue.class));
+                                    }
+                                });
+                            }
+                        } else {
+                            var result = findLoaded(obj);
+                            if (result == null) {
+                                throw new RuntimeException("Cannot inject object of type " + param);
+                            }
+                            deferredParameters.add(result);
+                        }
+                    }
+                } catch (Exception e) {
+                    throw new RuntimeException("Failed to prepare injector constructor " + injectCtor + " of bytecode recorder",
+                            e);
+                }
+            }
+        }
+
+        @Override
+        void doPrepare(MethodContext context) {
+            for (var i : deferredParameters) {
+                i.doPrepare(context);
+            }
+            super.doPrepare(context);
+        }
+
+        @Override
+        ResultHandle createValue(MethodContext context, MethodCreator method, ResultHandle array) {
+            if (injectCtor == null) {
+                return method.newInstance(ofConstructor(theClass));
+            } else {
+                try {
+                    List<ResultHandle> handles = new ArrayList<>();
+                    for (var result : deferredParameters) {
+                        handles.add(context.loadDeferred(result));
+                    }
+                    return method.newInstance(ofConstructor(injectCtor.getDeclaringClass(), injectCtor.getParameterTypes()),
+                            handles.toArray(ResultHandle[]::new));
+                } catch (Exception e) {
+                    throw new RuntimeException("Failed to injector constructor " + injectCtor + " of bytecode recorder", e);
+                }
+            }
         }
     }
 
@@ -1758,6 +1895,31 @@ public class BytecodeRecorderImpl implements RecorderContext {
     abstract class DeferredArrayStoreParameter extends DeferredParameter {
 
         final int arrayIndex;
+        final String returnType;
+
+        DeferredArrayStoreParameter(String expectedType) {
+            returnType = expectedType;
+            if (loadComplete) {
+                throw new RuntimeException("Cannot create new DeferredArrayStoreParameter after array has been allocated");
+            }
+            arrayIndex = deferredParameterCount++;
+        }
+
+        DeferredArrayStoreParameter(Object target, Class<?> expectedType) {
+            if (expectedType == List.class) {
+                returnType = expectedType.getName();
+            } else if (target != null && !(target instanceof Proxy) && isAccessible(target.getClass())) {
+                returnType = target.getClass().getName();
+            } else if (expectedType != null && isAccessible(expectedType)) {
+                returnType = expectedType.getName();
+            } else {
+                returnType = null;
+            }
+            if (loadComplete) {
+                throw new RuntimeException("Cannot create new DeferredArrayStoreParameter after array has been allocated");
+            }
+            arrayIndex = deferredParameterCount++;
+        }
 
         /**
          * method that contains the logic to actually create the stored value
@@ -1780,19 +1942,29 @@ public class BytecodeRecorderImpl implements RecorderContext {
 
         @Override
         final ResultHandle doLoad(MethodContext context, MethodCreator method, ResultHandle array) {
-            return method.readArrayValue(array, arrayIndex);
+            ResultHandle resultHandle = method.readArrayValue(array, arrayIndex);
+            if (returnType == null) {
+                return resultHandle;
+            }
+            return method.checkCast(resultHandle, returnType);
         }
 
-        DeferredArrayStoreParameter() {
-            arrayIndex = deferredParameterCount++;
-        }
+    }
 
+    private boolean isAccessible(Class<?> expectedType) {
+        if (!Modifier.isPublic(expectedType.getModifiers())) {
+            return false;
+        }
+        if (expectedType.getPackage() == null) {
+            return true;
+        }
+        return expectedType.getModule().isExported(expectedType.getPackage().getName());
     }
 
     /**
      * A step that must be executed to serialize a complex object
      */
-    interface SerialzationStep {
+    interface SerializationStep {
 
         void handle(MethodContext context, MethodCreator method, DeferredArrayStoreParameter out);
 
