@@ -9,12 +9,12 @@ import java.lang.reflect.Method;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 
 import org.jboss.logging.Logger;
@@ -27,13 +27,17 @@ import io.quarkus.bootstrap.app.StartupAction;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.builder.BuildResult;
 import io.quarkus.deployment.builditem.ApplicationClassNameBuildItem;
+import io.quarkus.deployment.builditem.DevServicesLauncherConfigResultBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.GeneratedResourceBuildItem;
 import io.quarkus.deployment.builditem.MainClassBuildItem;
+import io.quarkus.deployment.builditem.RuntimeApplicationShutdownBuildItem;
 import io.quarkus.deployment.builditem.TransformedClassesBuildItem;
 import io.quarkus.deployment.configuration.RunTimeConfigurationGenerator;
 import io.quarkus.dev.appstate.ApplicationStateNotification;
+import io.quarkus.runtime.ApplicationLifecycleManager;
 import io.quarkus.runtime.Quarkus;
+import io.quarkus.runtime.configuration.RuntimeOverrideConfigSource;
 
 public class StartupActionImpl implements StartupAction {
 
@@ -54,53 +58,18 @@ public class StartupActionImpl implements StartupAction {
         //so we have some differences between dev and test mode here.
         //test mode only has a single class loader, while dev uses a disposable runtime class loader
         //that is discarded between restarts
-        Map<String, byte[]> resources = new HashMap<>();
-        resources.putAll(extractGeneratedResources(true));
-        if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST) {
+        Map<String, byte[]> resources = new HashMap<>(extractGeneratedResources(true));
+        if (curatedApplication.getQuarkusBootstrap().isFlatClassPath()) {
             resources.putAll(extractGeneratedResources(false));
             baseClassLoader.reset(resources, transformedClasses);
             runtimeClassLoader = baseClassLoader;
         } else {
             baseClassLoader.reset(extractGeneratedResources(false),
                     transformedClasses);
-            runtimeClassLoader = curatedApplication.createRuntimeClassLoader(baseClassLoader,
+            runtimeClassLoader = curatedApplication.createRuntimeClassLoader(
                     resources, transformedClasses);
         }
         this.runtimeClassLoader = runtimeClassLoader;
-    }
-
-    private void handleEagerClasses(QuarkusClassLoader runtimeClassLoader, Set<String> eagerClasses) {
-        int availableProcessors = Runtime.getRuntime().availableProcessors();
-        if (availableProcessors == 1) {
-            return;
-        }
-        //leave one processor for the main startup thread
-        ExecutorService loadingExecutor = Executors.newFixedThreadPool(availableProcessors - 1);
-        for (String i : eagerClasses) {
-            loadingExecutor.submit(new Runnable() {
-                @Override
-                public void run() {
-                    try {
-                        //no need to restore the old TCCL, this thread is going away
-                        Thread.currentThread().setContextClassLoader(runtimeClassLoader);
-                        runtimeClassLoader.loadClass(i);
-                    } catch (ClassNotFoundException e) {
-                        log.debug("Failed to eagerly load class", e);
-                        //we just ignore this for now, the problem
-                        //will be reported for real in the startup sequence
-                    }
-                }
-            });
-        }
-        Thread t = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                //when all the jobs are done we shut down
-                //we do this in a new thread to allow the main thread to continue doing startup
-                loadingExecutor.shutdown();
-            }
-        });
-        t.start();
     }
 
     /**
@@ -137,6 +106,14 @@ public class StartupActionImpl implements StartupAction {
                         //this can happen if we did not make it to application init
                         if (ApplicationStateNotification.getState() == ApplicationStateNotification.State.INITIAL) {
                             ApplicationStateNotification.notifyStartupFailed(e);
+                        }
+                    } finally {
+                        for (var i : buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class)) {
+                            try {
+                                i.getCloseTask().run();
+                            } catch (Throwable t) {
+                                log.error("Failed to run close task", t);
+                            }
                         }
                     }
                 }
@@ -175,7 +152,55 @@ public class StartupActionImpl implements StartupAction {
         } finally {
             Thread.currentThread().setContextClassLoader(old);
         }
+    }
 
+    @Override
+    public int runMainClassBlocking(String... args) throws Exception {
+        //we have our class loaders
+        ClassLoader old = Thread.currentThread().getContextClassLoader();
+        Thread.currentThread().setContextClassLoader(runtimeClassLoader);
+        final String className = buildResult.consume(MainClassBuildItem.class).getClassName();
+        try {
+            AtomicInteger result = new AtomicInteger();
+            Class<?> lifecycleManager = Class.forName(ApplicationLifecycleManager.class.getName(), true, runtimeClassLoader);
+            Method getCurrentApplication = lifecycleManager.getDeclaredMethod("getCurrentApplication");
+            Object oldApplication = getCurrentApplication.invoke(null);
+            lifecycleManager.getDeclaredMethod("setDefaultExitCodeHandler", Consumer.class).invoke(null,
+                    new Consumer<Integer>() {
+                        @Override
+                        public void accept(Integer integer) {
+                            result.set(integer);
+                        }
+                    });
+            // force init here
+            Class<?> appClass = Class.forName(className, true, runtimeClassLoader);
+            Method start = appClass.getMethod("main", String[].class);
+            start.invoke(null, (Object) (args == null ? new String[0] : args));
+            Class<?> q = Class.forName(Quarkus.class.getName(), true, runtimeClassLoader);
+            q.getMethod("blockingExit").invoke(null);
+            Object newApplication = getCurrentApplication.invoke(null);
+            if (oldApplication == newApplication) {
+                //quarkus was not actually started by the main method
+                //just return
+                return 0;
+            }
+            return result.get();
+        } finally {
+            runtimeClassLoader.close();
+            Thread.currentThread().setContextClassLoader(old);
+            for (var i : buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class)) {
+                try {
+                    i.getCloseTask().run();
+                } catch (Throwable t) {
+                    log.error("Failed to run close task", t);
+                }
+            }
+        }
+    }
+
+    @Override
+    public void overrideConfig(Map<String, String> config) {
+        RuntimeOverrideConfigSource.setConfig(runtimeClassLoader, config);
     }
 
     /**
@@ -208,7 +233,7 @@ public class StartupActionImpl implements StartupAction {
             }
 
             Method start = appClass.getMethod("start", String[].class);
-            Object application = appClass.newInstance();
+            Object application = appClass.getDeclaredConstructor().newInstance();
             start.invoke(application, (Object) args);
             Closeable closeTask = (Closeable) application;
             return new RunningQuarkusApplicationImpl(new Closeable() {
@@ -227,7 +252,16 @@ public class StartupActionImpl implements StartupAction {
                         }
                     } finally {
                         ForkJoinClassLoading.setForkJoinClassLoader(ClassLoader.getSystemClassLoader());
-                        if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST) {
+
+                        for (var i : buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class)) {
+                            try {
+                                i.getCloseTask().run();
+                            } catch (Throwable t) {
+                                log.error("Failed to run close task", t);
+                            }
+                        }
+                        if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST &&
+                                !curatedApplication.getQuarkusBootstrap().isAuxiliaryApplication()) {
                             //for tests we just always shut down the curated application, as it is only used once
                             //dev mode might be about to restart, so we leave it
                             curatedApplication.close();
@@ -251,14 +285,26 @@ public class StartupActionImpl implements StartupAction {
         return runtimeClassLoader;
     }
 
+    @Override
+    public Map<String, String> getDevServicesProperties() {
+        DevServicesLauncherConfigResultBuildItem result = buildResult
+                .consumeOptional(DevServicesLauncherConfigResultBuildItem.class);
+        if (result == null) {
+            return Collections.emptyMap();
+        }
+        return new HashMap<>(result.getConfig());
+    }
+
     private Map<String, byte[]> extractTransformers(Set<String> eagerClasses) {
         Map<String, byte[]> ret = new HashMap<>();
         TransformedClassesBuildItem transformers = buildResult.consume(TransformedClassesBuildItem.class);
         for (Set<TransformedClassesBuildItem.TransformedClass> i : transformers.getTransformedClassesByJar().values()) {
             for (TransformedClassesBuildItem.TransformedClass clazz : i) {
-                ret.put(clazz.getFileName(), clazz.getData());
-                if (clazz.isEager()) {
-                    eagerClasses.add(clazz.getClassName());
+                if (clazz.getData() != null) {
+                    ret.put(clazz.getFileName(), clazz.getData());
+                    if (clazz.isEager()) {
+                        eagerClasses.add(clazz.getClassName());
+                    }
                 }
             }
         }
@@ -269,7 +315,7 @@ public class StartupActionImpl implements StartupAction {
         Map<String, byte[]> data = new HashMap<>();
         for (GeneratedClassBuildItem i : buildResult.consumeMulti(GeneratedClassBuildItem.class)) {
             if (i.isApplicationClass() == applicationClasses) {
-                data.put(i.getName().replace(".", "/") + ".class", i.getClassData());
+                data.put(i.getName().replace('.', '/') + ".class", i.getClassData());
                 if (BootstrapDebug.DEBUG_CLASSES_DIR != null) {
                     try {
                         File debugPath = new File(BootstrapDebug.DEBUG_CLASSES_DIR);
@@ -311,6 +357,9 @@ public class StartupActionImpl implements StartupAction {
         }
         if (applicationClasses) {
             for (GeneratedResourceBuildItem i : buildResult.consumeMulti(GeneratedResourceBuildItem.class)) {
+                if (i.isExcludeFromDevCL()) {
+                    continue;
+                }
                 data.put(i.getName(), i.getClassData());
             }
         }
