@@ -2,9 +2,6 @@ package io.quarkus.arc.deployment;
 
 import static io.quarkus.runtime.annotations.ConfigPhase.BUILD_TIME;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -20,8 +17,8 @@ import io.quarkus.runtime.annotations.ConfigRoot;
 @ConfigRoot(phase = BUILD_TIME)
 public class ArcConfig {
 
-    public static final Set<String> ALLOWED_REMOVE_UNUSED_BEANS_VALUES = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList("all", "true", "none", "false", "fwk", "framework")));
+    public static final Set<String> ALLOWED_REMOVE_UNUSED_BEANS_VALUES = Set.of("all", "true", "none", "false", "fwk",
+            "framework");
 
     /**
      * <ul>
@@ -71,6 +68,16 @@ public class ArcConfig {
      */
     @ConfigItem(defaultValue = "true")
     public boolean transformUnproxyableClasses;
+
+    /**
+     * If set to true, the build fails if a private method that is neither an observer nor a producer, is annotated with an
+     * interceptor
+     * binding.
+     * An example of this is the use of {@code Transactional} on a private method of a bean.
+     * If set to false, Quarkus simply logs a warning that the annotation will be ignored.
+     */
+    @ConfigItem(defaultValue = "false")
+    public boolean failOnInterceptedPrivateMethod;
 
     /**
      * The default naming strategy for {@link ConfigProperties.NamingStrategy}. The allowed values are determined
@@ -162,11 +169,12 @@ public class ArcConfig {
     public boolean detectUnusedFalsePositives;
 
     /**
-     * If set to true then the container attempts to detect usage of <i>wrong</i> annotations.
+     * If set to true then the container attempts to detect <i>wrong</i> usages of annotations and eventually fails the build to
+     * prevent unexpected behavior of a Quarkus application.
      * <p>
-     * A <i>wrong</i> annotation may lead to unexpected behavior in a Quarkus application. A typical example is
-     * {@code @javax.ejb.Singleton} which is often confused with {@code @javax.inject.Singleton}. As a result a component
-     * annotated with {@code @javax.ejb.Singleton} can be completely ignored.
+     * A typical example is {@code @javax.ejb.Singleton} which is often confused with {@code @javax.inject.Singleton}. As a
+     * result a component annotated with {@code @javax.ejb.Singleton} would be completely ignored. Another example is an inner
+     * class annotated with a scope annotation - this component would be again completely ignored.
      */
     @ConfigItem(defaultValue = "true")
     public boolean detectWrongAnnotations;
@@ -182,6 +190,18 @@ public class ArcConfig {
      */
     @ConfigItem
     public ArcTestConfig test;
+
+    /**
+     * The list of packages that will not be checked for split package issues.
+     * <p>
+     * A package string representation can be:
+     * <ul>
+     * <li>a full name of the package, i.e. {@code org.acme.foo}</li>
+     * <li>a package name with suffix {@code .*}, i.e. {@code org.acme.*}, which matches a package that starts with provided
+     * value</li>
+     */
+    @ConfigItem
+    public Optional<List<String>> ignoredSplitPackages;
 
     public final boolean isRemoveUnusedBeansFieldValid() {
         return ALLOWED_REMOVE_UNUSED_BEANS_VALUES.contains(removeUnusedBeans.toLowerCase());
