@@ -1,7 +1,7 @@
 package io.quarkus.kubernetes.config.deployment;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.jboss.logmanager.Level;
 
@@ -12,9 +12,9 @@ import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.LogCategoryBuildItem;
 import io.quarkus.deployment.builditem.RunTimeConfigurationSourceValueBuildItem;
 import io.quarkus.kubernetes.client.runtime.KubernetesClientBuildConfig;
-import io.quarkus.kubernetes.client.runtime.KubernetesConfigBuildTimeConfig;
-import io.quarkus.kubernetes.client.runtime.KubernetesConfigRecorder;
-import io.quarkus.kubernetes.client.runtime.KubernetesConfigSourceConfig;
+import io.quarkus.kubernetes.config.runtime.KubernetesConfigBuildTimeConfig;
+import io.quarkus.kubernetes.config.runtime.KubernetesConfigRecorder;
+import io.quarkus.kubernetes.config.runtime.KubernetesConfigSourceConfig;
 import io.quarkus.kubernetes.spi.KubernetesRoleBindingBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesRoleBuildItem;
 import io.quarkus.runtime.TlsConfig;
@@ -43,7 +43,7 @@ public class KubernetesConfigProcessor {
                     new KubernetesRoleBuildItem.PolicyRule(
                             Collections.singletonList(""),
                             Collections.singletonList("secrets"),
-                            Arrays.asList("get")))));
+                            List.of("get")))));
             roleBindingProducer.produce(new KubernetesRoleBindingBuildItem("view-secrets", false));
         }
 
