@@ -1,11 +1,14 @@
 package io.quarkus.arc.impl;
 
+import static java.util.function.Predicate.not;
+
 import io.quarkus.arc.Arc;
 import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.Components;
 import io.quarkus.arc.ComponentsProvider;
 import io.quarkus.arc.InjectableBean;
 import io.quarkus.arc.InjectableContext;
+import io.quarkus.arc.InjectableDecorator;
 import io.quarkus.arc.InjectableInstance;
 import io.quarkus.arc.InjectableInterceptor;
 import io.quarkus.arc.InjectableObserverMethod;
@@ -14,6 +17,7 @@ import io.quarkus.arc.ManagedContext;
 import io.quarkus.arc.RemovedBean;
 import io.quarkus.arc.ResourceReferenceProvider;
 import io.quarkus.arc.impl.ArcCDIProvider.ArcCDI;
+import java.lang.StackWalker.StackFrame;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.lang.reflect.TypeVariable;
@@ -23,8 +27,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -37,6 +39,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import javax.enterprise.context.ApplicationScoped;
 import javax.enterprise.context.BeforeDestroyed;
 import javax.enterprise.context.Dependent;
@@ -51,6 +54,7 @@ import javax.enterprise.inject.Instance;
 import javax.enterprise.inject.spi.Bean;
 import javax.enterprise.inject.spi.BeanManager;
 import javax.enterprise.inject.spi.CDI;
+import javax.enterprise.inject.spi.Decorator;
 import javax.enterprise.inject.spi.InjectionPoint;
 import javax.enterprise.inject.spi.InterceptionType;
 import javax.enterprise.inject.spi.Interceptor;
@@ -68,14 +72,15 @@ public class ArcContainerImpl implements ArcContainer {
 
     private final AtomicBoolean running;
 
-    private final List<InjectableBean<?>> beans;
-    private final List<RemovedBean> removedBeans;
+    private final ArrayList<InjectableBean<?>> beans;
+    private final ArrayList<RemovedBean> removedBeans;
     private final List<InjectableInterceptor<?>> interceptors;
+    private final List<InjectableDecorator<?>> decorators;
     private final List<InjectableObserverMethod<?>> observers;
     private final Map<Class<? extends Annotation>, Set<Annotation>> transitiveInterceptorBindings;
     private final Map<String, Set<String>> qualifierNonbindingMembers;
 
-    private final Map<Class<? extends Annotation>, Collection<InjectableContext>> contexts;
+    private final Map<Class<? extends Annotation>, List<InjectableContext>> contexts;
     private final ManagedContext requestContext;
     private final InjectableContext applicationContext;
     private final InjectableContext singletonContext;
@@ -84,18 +89,19 @@ public class ArcContainerImpl implements ArcContainer {
     private final ComputingCache<String, InjectableBean<?>> beansById;
     private final ComputingCache<String, Set<InjectableBean<?>>> beansByName;
 
-    private final List<ResourceReferenceProvider> resourceProviders;
+    private final ArrayList<ResourceReferenceProvider> resourceProviders;
 
     final InstanceImpl<Object> instance;
 
     private volatile ExecutorService executorService;
 
     public ArcContainerImpl() {
-        id = "" + ID_GENERATOR.incrementAndGet();
+        id = String.valueOf(ID_GENERATOR.incrementAndGet());
         running = new AtomicBoolean(true);
         beans = new ArrayList<>();
         removedBeans = new ArrayList<>();
         interceptors = new ArrayList<>();
+        decorators = new ArrayList<>();
         observers = new ArrayList<>();
         transitiveInterceptorBindings = new HashMap<>();
         qualifierNonbindingMembers = new HashMap<>();
@@ -113,11 +119,14 @@ public class ArcContainerImpl implements ArcContainer {
             for (InjectableBean<?> bean : components.getBeans()) {
                 if (bean instanceof InjectableInterceptor) {
                     interceptors.add((InjectableInterceptor<?>) bean);
+                } else if (bean instanceof InjectableDecorator) {
+                    decorators.add((InjectableDecorator<?>) bean);
                 } else {
                     beans.add(bean);
                 }
             }
             removedBeans.addAll(components.getRemovedBeans());
+            removedBeans.trimToSize();
             observers.addAll(components.getObservers());
             // Add custom contexts
             for (InjectableContext context : components.getContexts()) {
@@ -135,9 +144,10 @@ public class ArcContainerImpl implements ArcContainer {
             qualifierNonbindingMembers.putAll(components.getQualifierNonbindingMembers());
         }
         // register built-in beans
-        addBuiltInBeans();
+        addBuiltInBeans(beans);
+        beans.trimToSize();
 
-        Collections.sort(interceptors, (i1, i2) -> Integer.compare(i2.getPriority(), i1.getPriority()));
+        interceptors.sort((i1, i2) -> Integer.compare(i2.getPriority(), i1.getPriority()));
 
         resolved = new ComputingCache<>(this::resolve);
         beansById = new ComputingCache<>(this::findById);
@@ -146,6 +156,7 @@ public class ArcContainerImpl implements ArcContainer {
         for (ResourceReferenceProvider resourceProvider : ServiceLoader.load(ResourceReferenceProvider.class)) {
             resourceProviders.add(resourceProvider);
         }
+        resourceProviders.trimToSize();
 
         instance = InstanceImpl.of(Object.class, Collections.emptySet());
     }
@@ -153,15 +164,16 @@ public class ArcContainerImpl implements ArcContainer {
     private void putContext(InjectableContext context) {
         Collection<InjectableContext> values = contexts.get(context.getScope());
         if (values == null) {
-            contexts.put(context.getScope(), Collections.singleton(context));
+            contexts.put(context.getScope(), Collections.singletonList(context));
         } else {
-            List<InjectableContext> multi = new LinkedList<>(values);
+            List<InjectableContext> multi = new ArrayList<>(values.size() + 1);
+            multi.addAll(values);
             multi.add(context);
             contexts.put(context.getScope(), Collections.unmodifiableList(multi));
         }
     }
 
-    private void addBuiltInBeans() {
+    private static void addBuiltInBeans(List<InjectableBean<?>> beans) {
         // BeanManager, Event<?>, Instance<?>
         beans.add(new BeanManagerBean());
         beans.add(new EventBean());
@@ -169,12 +181,10 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     public void init() {
-        requireRunning();
         // Fire an event with qualifier @Initialized(ApplicationScoped.class)
-        Set<Annotation> qualifiers = new HashSet<>(4);
-        qualifiers.add(Initialized.Literal.APPLICATION);
-        qualifiers.add(Any.Literal.INSTANCE);
-        EventImpl.createNotifier(Object.class, Object.class, qualifiers, this).notify(toString());
+        Set<Annotation> qualifiers = Set.of(Initialized.Literal.APPLICATION, Any.Literal.INSTANCE);
+        EventImpl.createNotifier(Object.class, Object.class, qualifiers, this, false)
+                .notify("@Initialized(ApplicationScoped.class)");
         // Configure CDIProvider used for CDI.current()
         CDI.setCDIProvider(new ArcCDIProvider());
         LOGGER.debugf("ArC DI container initialized [beans=%s, observers=%s]", beans.size(), observers.size());
@@ -182,7 +192,6 @@ public class ArcContainerImpl implements ArcContainer {
 
     @Override
     public InjectableContext getActiveContext(Class<? extends Annotation> scopeType) {
-        requireRunning();
         // Application/Singleton context is always active
         if (ApplicationScoped.class.equals(scopeType)) {
             return applicationContext;
@@ -206,39 +215,33 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     @Override
-    public Collection<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
-        requireRunning();
+    public List<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
         return contexts.getOrDefault(scopeType, Collections.emptyList());
     }
 
     @Override
     public Set<Class<? extends Annotation>> getScopes() {
-        return contexts.keySet().stream().collect(Collectors.toSet());
+        return new HashSet<>(contexts.keySet());
     }
 
     @Override
     public <T> InstanceHandle<T> instance(Class<T> type, Annotation... qualifiers) {
-        requireRunning();
         return instanceHandle(type, qualifiers);
     }
 
     @Override
     public <T> InstanceHandle<T> instance(TypeLiteral<T> type, Annotation... qualifiers) {
-        requireRunning();
         return instanceHandle(type.getType(), qualifiers);
     }
 
     @Override
     public <X> InstanceHandle<X> instance(Type type, Annotation... qualifiers) {
-        requireRunning();
         return instanceHandle(type, qualifiers);
     }
 
     @SuppressWarnings("unchecked")
     @Override
     public <T> Supplier<InstanceHandle<T>> instanceSupplier(Class<T> type, Annotation... qualifiers) {
-        requireRunning();
-
         if (qualifiers == null || qualifiers.length == 0) {
             qualifiers = new Annotation[] { Default.Literal.INSTANCE };
         }
@@ -255,7 +258,7 @@ public class ArcContainerImpl implements ArcContainer {
                 }
             }
         }
-        InjectableBean<T> bean = filteredBean.isEmpty() || filteredBean.size() > 1 ? null
+        InjectableBean<T> bean = filteredBean.size() != 1 ? null
                 : (InjectableBean<T>) filteredBean.iterator().next();
         if (bean == null) {
             return null;
@@ -271,8 +274,7 @@ public class ArcContainerImpl implements ArcContainer {
     @Override
     public <T> InstanceHandle<T> instance(InjectableBean<T> bean) {
         Objects.requireNonNull(bean);
-        requireRunning();
-        return (InstanceHandle<T>) beanInstanceHandle(bean, null);
+        return beanInstanceHandle(bean, null);
     }
 
     @Override
@@ -294,7 +296,6 @@ public class ArcContainerImpl implements ArcContainer {
     @Override
     public <T> InjectableBean<T> bean(String beanIdentifier) {
         Objects.requireNonNull(beanIdentifier);
-        requireRunning();
         return (InjectableBean<T>) beansById.getValue(beanIdentifier);
     }
 
@@ -302,16 +303,14 @@ public class ArcContainerImpl implements ArcContainer {
     @Override
     public <T> InstanceHandle<T> instance(String name) {
         Objects.requireNonNull(name);
-        requireRunning();
         Set<InjectableBean<?>> resolvedBeans = beansByName.getValue(name);
-        return resolvedBeans.isEmpty() || resolvedBeans.size() > 1 ? InstanceHandleImpl.unavailable()
+        return resolvedBeans.size() != 1 ? EagerInstanceHandle.unavailable()
                 : (InstanceHandle<T>) beanInstanceHandle(resolvedBeans.iterator()
                         .next(), null);
     }
 
     @Override
     public ManagedContext requestContext() {
-        requireRunning();
         return requestContext;
     }
 
@@ -334,7 +333,7 @@ public class ArcContainerImpl implements ArcContainer {
     public String toString() {
         return "ArcContainerImpl [id=" + id + ", running=" + running + ", beans=" + beans.size() + ", observers="
                 + observers.size() + ", scopes="
-                + getScopes() + "]";
+                + contexts.size() + "]";
     }
 
     public synchronized void shutdown() {
@@ -352,7 +351,7 @@ public class ArcContainerImpl implements ArcContainer {
             beforeDestroyQualifiers.add(BeforeDestroyed.Literal.APPLICATION);
             beforeDestroyQualifiers.add(Any.Literal.INSTANCE);
             try {
-                EventImpl.createNotifier(Object.class, Object.class, beforeDestroyQualifiers, this).notify(toString());
+                EventImpl.createNotifier(Object.class, Object.class, beforeDestroyQualifiers, this, false).notify(toString());
             } catch (Exception e) {
                 LOGGER.warn("An error occurred during delivery of the @BeforeDestroyed(ApplicationScoped.class) event", e);
             }
@@ -363,7 +362,7 @@ public class ArcContainerImpl implements ArcContainer {
             destroyQualifiers.add(Destroyed.Literal.APPLICATION);
             destroyQualifiers.add(Any.Literal.INSTANCE);
             try {
-                EventImpl.createNotifier(Object.class, Object.class, destroyQualifiers, this).notify(toString());
+                EventImpl.createNotifier(Object.class, Object.class, destroyQualifiers, this, false).notify(toString());
             } catch (Exception e) {
                 LOGGER.warn("An error occurred during delivery of the @Destroyed(ApplicationScoped.class) event", e);
             }
@@ -425,9 +424,8 @@ public class ArcContainerImpl implements ArcContainer {
             if (resetCurrentInjectionPoint) {
                 prev = InjectionPointProvider.set(CurrentInjectionPointProvider.EMPTY);
             }
-
             try {
-                return new InstanceHandleImpl<T>(bean, bean.get(creationalContext), creationalContext, parentContext,
+                return new EagerInstanceHandle<>(bean, bean.get(creationalContext), creationalContext, parentContext,
                         destroyLogic);
             } finally {
                 if (resetCurrentInjectionPoint) {
@@ -435,7 +433,7 @@ public class ArcContainerImpl implements ArcContainer {
                 }
             }
         } else {
-            return InstanceHandleImpl.unavailable();
+            return EagerInstanceHandle.unavailable();
         }
     }
 
@@ -448,19 +446,19 @@ public class ArcContainerImpl implements ArcContainer {
         if (qualifiers == null || qualifiers.length == 0) {
             qualifiers = new Annotation[] { Default.Literal.INSTANCE };
         } else {
-            Qualifiers.verify(qualifiers);
+            Qualifiers.verify(qualifiers, qualifierNonbindingMembers.keySet());
         }
         Set<InjectableBean<?>> resolvedBeans = resolved.getValue(new Resolvable(requiredType, qualifiers));
-        return resolvedBeans.isEmpty() || resolvedBeans.size() > 1 ? null : (InjectableBean<T>) resolvedBeans.iterator().next();
+        return resolvedBeans.size() != 1 ? null : (InjectableBean<T>) resolvedBeans.iterator().next();
     }
 
     Set<Bean<?>> getBeans(Type requiredType, Annotation... qualifiers) {
         if (requiredType instanceof TypeVariable) {
             throw new IllegalArgumentException("The given type is a type variable: " + requiredType);
         }
-        Qualifiers.verify(qualifiers);
+        Qualifiers.verify(qualifiers, qualifierNonbindingMembers.keySet());
         // This method does not cache the results
-        return new HashSet<>(getMatchingBeans(new Resolvable(requiredType, qualifiers)));
+        return Set.of(getMatchingBeans(new Resolvable(requiredType, qualifiers)).toArray(new Bean<?>[] {}));
     }
 
     Set<Bean<?>> getBeans(String name) {
@@ -470,6 +468,10 @@ public class ArcContainerImpl implements ArcContainer {
 
     Map<Class<? extends Annotation>, Set<Annotation>> getTransitiveInterceptorBindings() {
         return transitiveInterceptorBindings;
+    }
+
+    Set<String> getCustomQualifiers() {
+        return qualifierNonbindingMembers.keySet();
     }
 
     boolean isScope(Class<? extends Annotation> annotationType) {
@@ -529,8 +531,8 @@ public class ArcContainerImpl implements ArcContainer {
             return beans.iterator().next();
         } else {
             // Try to resolve the ambiguity
-            if (beans.stream().allMatch(b -> b instanceof InjectableBean)) {
-                List<InjectableBean<?>> matching = new ArrayList<>();
+            if (beans.stream().allMatch(InjectableBean.class::isInstance)) {
+                List<InjectableBean<?>> matching = new ArrayList<>(beans.size());
                 for (Bean<? extends X> bean : beans) {
                     matching.add((InjectableBean<? extends X>) bean);
                 }
@@ -542,11 +544,7 @@ public class ArcContainerImpl implements ArcContainer {
             } else {
                 // The set contains non-Arc beans - give our best effort
                 Set<Bean<? extends X>> resolved = new HashSet<>(beans);
-                for (Iterator<Bean<? extends X>> iterator = resolved.iterator(); iterator.hasNext();) {
-                    if (!iterator.next().isAlternative()) {
-                        iterator.remove();
-                    }
-                }
+                resolved.removeIf(not(Bean::isAlternative));
                 if (resolved.size() != 1) {
                     throw new AmbiguousResolutionException(resolved.toString());
                 }
@@ -559,46 +557,43 @@ public class ArcContainerImpl implements ArcContainer {
         if (matching.isEmpty()) {
             return Collections.emptySet();
         } else if (matching.size() == 1) {
-            return Collections.singleton(matching.get(0));
+            return Set.of(matching.get(0));
+        }
+        // Try to resolve the ambiguity and return the set of disambiguated beans
+
+        // First remove the default beans
+        List<InjectableBean<?>> nonDefault = new ArrayList<>(matching);
+        nonDefault.removeIf(InjectableBean::isDefaultBean);
+        if (nonDefault.isEmpty()) {
+            // All the matching beans were default
+            return Set.copyOf(matching);
+        } else if (nonDefault.size() == 1) {
+            return Set.of(nonDefault.get(0));
         }
 
-        // Try to resolve the ambiguity
-        List<InjectableBean<?>> resolved = new ArrayList<>(matching);
+        // More than one non-default bean remains - eliminate beans that don't have a priority
+        List<InjectableBean<?>> priorityBeans = new ArrayList<>(nonDefault);
+        priorityBeans.removeIf(not(ArcContainerImpl::isAlternativeOrDeclaredOnAlternative));
+        if (priorityBeans.isEmpty()) {
+            // No alternative/priority beans are present
+            return Set.copyOf(nonDefault);
+        } else if (priorityBeans.size() == 1) {
+            return Set.of(priorityBeans.get(0));
+        } else {
+            // Keep only the highest priorities 
+            priorityBeans.sort(ArcContainerImpl::compareAlternativeBeans);
+            Integer highest = getAlternativePriority(priorityBeans.get(0));
+            priorityBeans.removeIf(bean -> !highest.equals(getAlternativePriority(bean)));
+            if (priorityBeans.size() == 1) {
+                return Set.of(priorityBeans.get(0));
+            }
+            return Set.copyOf(priorityBeans);
+        }
+    }
 
-        for (Iterator<InjectableBean<?>> iterator = resolved.iterator(); iterator.hasNext();) {
-            InjectableBean<?> beanInfo = iterator.next();
-            if (beanInfo.isDefaultBean()) {
-                iterator.remove();
-            }
-        }
-        if (resolved.size() == 1) {
-            return Collections.singleton(resolved.get(0));
-        }
-
-        for (Iterator<InjectableBean<?>> iterator = resolved.iterator(); iterator.hasNext();) {
-            InjectableBean<?> bean = iterator.next();
-            if (bean.getAlternativePriority() == null
-                    && (bean.getDeclaringBean() == null || bean.getDeclaringBean().getAlternativePriority() == null)) {
-                // Remove non-alternatives
-                iterator.remove();
-            }
-        }
-        if (resolved.size() == 1) {
-            return Collections.singleton(resolved.get(0));
-        } else if (resolved.size() > 1) {
-            resolved.sort(ArcContainerImpl::compareAlternativeBeans);
-            // Keep only the highest priorities
-            Integer highest = getAlternativePriority(resolved.get(0));
-            for (Iterator<InjectableBean<?>> iterator = resolved.iterator(); iterator.hasNext();) {
-                if (!highest.equals(getAlternativePriority(iterator.next()))) {
-                    iterator.remove();
-                }
-            }
-            if (resolved.size() == 1) {
-                return Collections.singleton(resolved.get(0));
-            }
-        }
-        return new HashSet<>(matching);
+    private static boolean isAlternativeOrDeclaredOnAlternative(InjectableBean<?> bean) {
+        return bean.getAlternativePriority() != null
+                || bean.getDeclaringBean() != null && bean.getDeclaringBean().getAlternativePriority() != null;
     }
 
     private static Integer getAlternativePriority(InjectableBean<?> bean) {
@@ -610,14 +605,14 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     List<InjectableBean<?>> getMatchingBeans(Resolvable resolvable) {
-        List<InjectableBean<?>> matching = new LinkedList<>();
+        List<InjectableBean<?>> matching = new ArrayList<>();
         for (InjectableBean<?> bean : beans) {
             if (matches(bean, resolvable.requiredType, resolvable.qualifiers)) {
                 matching.add(bean);
             }
         }
         if (matching.isEmpty() && !removedBeans.isEmpty()) {
-            List<RemovedBean> removedMatching = new LinkedList<>();
+            List<RemovedBean> removedMatching = new ArrayList<>();
             for (RemovedBean removedBean : removedBeans) {
                 if (matches(removedBean.getTypes(), removedBean.getQualifiers(), resolvable.requiredType,
                         resolvable.qualifiers)) {
@@ -629,21 +624,45 @@ public class ArcContainerImpl implements ArcContainer {
                 String msg = "\n%1$s%1$s%1$s%1$s\n"
                         + "CDI: programmatic lookup problem detected\n"
                         + "-----------------------------------------\n"
-                        + "At least one bean matched the required type and qualifiers but was marked as unused and removed during build\n"
-                        + "Removed beans:\n\t- %2$s\n"
+                        + "At least one bean matched the required type and qualifiers but was marked as unused and removed during build\n\n"
+                        + "Stack frame: %5$s\n"
                         + "Required type: %3$s\n"
                         + "Required qualifiers: %4$s\n"
+                        + "Removed beans:\n\t- %2$s\n"
                         + "Solutions:\n"
                         + "\t- Application developers can eliminate false positives via the @Unremovable annotation\n"
                         + "\t- Extensions can eliminate false positives via build items, e.g. using the UnremovableBeanBuildItem\n"
                         + "\t- See also https://quarkus.io/guides/cdi-reference#remove_unused_beans\n"
+                        + "\t- Enable the DEBUG log level to see the full stack trace\n"
                         + "%1$s%1$s%1$s%1$s\n";
+                StackWalker walker = StackWalker.getInstance();
+                StackFrame frame = walker.walk(this::findCaller);
                 LOGGER.warnf(msg, separator,
                         removedMatching.stream().map(Object::toString).collect(Collectors.joining("\n\t- ")),
-                        resolvable.requiredType, Arrays.toString(resolvable.qualifiers));
+                        resolvable.requiredType, Arrays.toString(resolvable.qualifiers), frame != null ? frame : "n/a");
+                if (LOGGER.isDebugEnabled()) {
+                    LOGGER.debug("\nCDI: programmatic lookup stack trace:\n" + walker.walk(this::collectStack));
+                }
             }
         }
         return matching;
+    }
+
+    private StackFrame findCaller(Stream<StackFrame> stream) {
+        return stream
+                .filter(this::isCallerFrame)
+                .findFirst().orElse(null);
+    }
+
+    private String collectStack(Stream<StackFrame> stream) {
+        return stream
+                .map(Object::toString)
+                .collect(Collectors.joining("\n\t"));
+    }
+
+    private boolean isCallerFrame(StackFrame frame) {
+        String className = frame.getClassName();
+        return !className.startsWith("io.quarkus.arc.impl");
     }
 
     List<InjectableBean<?>> getMatchingBeans(String name) {
@@ -671,7 +690,7 @@ public class ArcContainerImpl implements ArcContainer {
 
     @SuppressWarnings("unchecked")
     <T> List<InjectableObserverMethod<? super T>> resolveObservers(Type eventType, Set<Annotation> eventQualifiers) {
-        Qualifiers.verify(eventQualifiers);
+        Qualifiers.verify(eventQualifiers, qualifierNonbindingMembers.keySet());
         if (observers.isEmpty()) {
             return Collections.emptyList();
         }
@@ -686,7 +705,7 @@ public class ArcContainerImpl implements ArcContainer {
             }
         }
         // Observers with smaller priority values are called first
-        Collections.sort(resolvedObservers, InjectableObserverMethod::compare);
+        resolvedObservers.sort(InjectableObserverMethod::compare);
         return resolvedObservers;
     }
 
@@ -712,6 +731,23 @@ public class ArcContainerImpl implements ArcContainer {
             }
         }
         return interceptors;
+    }
+
+    List<Decorator<?>> resolveDecorators(Set<Type> types, Annotation... qualifiers) {
+        if (decorators.isEmpty()) {
+            return Collections.emptyList();
+        }
+        if (Objects.requireNonNull(types).isEmpty()) {
+            throw new IllegalArgumentException("The set of bean types must not be empty");
+        }
+        List<Decorator<?>> decorators = new ArrayList<>();
+        for (InjectableDecorator<?> decorator : this.decorators) {
+            if (matches(types, Set.of(qualifiers), decorator.getDelegateType(),
+                    decorator.getDelegateQualifiers().toArray(new Annotation[] {}))) {
+                decorators.add(decorator);
+            }
+        }
+        return decorators;
     }
 
     private boolean hasAllInterceptionBindings(InjectableInterceptor<?> interceptor, Iterable<Annotation> bindings) {
@@ -792,26 +828,19 @@ public class ArcContainerImpl implements ArcContainer {
         return unwrap(Arc.container());
     }
 
-    private void requireRunning() {
-        if (!running.get()) {
-            throw new IllegalStateException("Container not running: " + toString());
-        }
-    }
-
     private static final class Resolvable {
 
-        private static final Set<Type> BUILT_IN_TYPES = new HashSet<>(Arrays.asList(Event.class, Instance.class));
-        private static final Annotation[] ANY_QUALIFIER = new Annotation[] { Any.Literal.INSTANCE };
+        private static final Annotation[] ANY_QUALIFIER = { Any.Literal.INSTANCE };
 
         final Type requiredType;
 
         final Annotation[] qualifiers;
 
         Resolvable(Type requiredType, Annotation[] qualifiers) {
-            // if the type is any of BUILT_IN_TYPES, the resolution simplifies type to raw type and ignores qualifiers
+            // if the type is Event or Instance (the built-in types), the resolution simplifies type to raw type and ignores qualifiers
             // this is so that every injection point matches the bean we provide for that type
             Type rawType = Reflections.getRawType(requiredType);
-            if (BUILT_IN_TYPES.contains(rawType)) {
+            if (Event.class.equals(rawType) || Instance.class.equals(rawType)) {
                 this.requiredType = rawType;
                 this.qualifiers = ANY_QUALIFIER;
             } else {
@@ -825,7 +854,7 @@ public class ArcContainerImpl implements ArcContainer {
             final int prime = 31;
             int result = 1;
             result = prime * result + Arrays.hashCode(qualifiers);
-            result = prime * result + ((requiredType == null) ? 0 : requiredType.hashCode());
+            result = prime * result + (requiredType == null ? 0 : requiredType.hashCode());
             return result;
         }
 
@@ -848,10 +877,7 @@ public class ArcContainerImpl implements ArcContainer {
             } else if (!requiredType.equals(other.requiredType)) {
                 return false;
             }
-            if (!Arrays.equals(qualifiers, other.qualifiers)) {
-                return false;
-            }
-            return true;
+            return Arrays.equals(qualifiers, other.qualifiers);
         }
 
     }
