@@ -22,11 +22,11 @@ public class ClassLoadingInterruptTestCase {
             jar.as(ExplodedExporter.class).exportExploded(path.toFile(), "tmp");
 
             ClassLoader cl = QuarkusClassLoader.builder("test", getClass().getClassLoader(), false)
-                    .addElement(new DirectoryClassPathElement(path.resolve("tmp")))
+                    .addElement(new DirectoryClassPathElement(path.resolve("tmp"), true))
                     .build();
             Class<?> c = cl.loadClass(InterruptClass.class.getName());
             Assertions.assertNotEquals(c, InterruptClass.class);
-            Runnable runnable = (Runnable) c.newInstance();
+            Runnable runnable = (Runnable) c.getDeclaredConstructor().newInstance();
             runnable.run();
         } finally {
             IoUtils.recursiveDelete(path);
