@@ -1,15 +1,14 @@
 package io.quarkus.qute;
 
+import io.quarkus.qute.Parser.StringReader;
+import io.quarkus.qute.TemplateInstance.Initializer;
 import io.quarkus.qute.TemplateLocator.TemplateLocation;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.Reader;
-import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -19,9 +18,6 @@ import java.util.function.Function;
 import java.util.function.Predicate;
 import org.jboss.logging.Logger;
 
-/**
- * 
- */
 class EngineImpl implements Engine {
 
     private static final Logger LOGGER = Logger.getLogger(EngineImpl.class);
@@ -36,19 +32,22 @@ class EngineImpl implements Engine {
     private final List<ResultMapper> resultMappers;
     private final AtomicLong idGenerator = new AtomicLong(0);
     private final List<ParserHook> parserHooks;
+    final List<TemplateInstance.Initializer> initializers;
     final boolean removeStandaloneLines;
 
     EngineImpl(EngineBuilder builder) {
-        this.sectionHelperFactories = Collections.unmodifiableMap(new HashMap<>(builder.sectionHelperFactories));
+        this.sectionHelperFactories = Map.copyOf(builder.sectionHelperFactories);
         this.valueResolvers = sort(builder.valueResolvers);
-        this.namespaceResolvers = ImmutableList.copyOf(builder.namespaceResolvers);
-        this.evaluator = new EvaluatorImpl(this.valueResolvers);
+        this.namespaceResolvers = ImmutableList.<NamespaceResolver> builder()
+                .addAll(builder.namespaceResolvers).add(new TemplateImpl.DataNamespaceResolver()).build();
+        this.evaluator = new EvaluatorImpl(this.valueResolvers, this.namespaceResolvers, builder.strictRendering);
         this.templates = new ConcurrentHashMap<>();
         this.locators = sort(builder.locators);
         this.resultMappers = sort(builder.resultMappers);
         this.sectionHelperFunc = builder.sectionHelperFunc;
         this.parserHooks = ImmutableList.copyOf(builder.parserHooks);
         this.removeStandaloneLines = builder.removeStandaloneLines;
+        this.initializers = ImmutableList.copyOf(builder.initializers);
     }
 
     @Override
@@ -95,6 +94,21 @@ class EngineImpl implements Engine {
         return resultMappers;
     }
 
+    @Override
+    public String mapResult(Object result, Expression expression) {
+        String val = null;
+        for (ResultMapper mapper : resultMappers) {
+            if (mapper.appliesTo(expression.getOrigin(), result)) {
+                val = mapper.map(result, expression);
+                break;
+            }
+        }
+        if (val == null) {
+            val = result.toString();
+        }
+        return val;
+    }
+
     public Template putTemplate(String id, Template template) {
         return templates.put(id, template);
     }
@@ -111,6 +125,11 @@ class EngineImpl implements Engine {
     @Override
     public void removeTemplates(Predicate<String> test) {
         templates.keySet().removeIf(test);
+    }
+
+    @Override
+    public List<Initializer> getTemplateInstanceInitializers() {
+        return initializers;
     }
 
     String generateId() {
