@@ -1,5 +1,6 @@
 package io.quarkus.it.keycloak;
 
+import static com.github.tomakehurst.wiremock.client.WireMock.matching;
 import static org.hamcrest.Matchers.equalTo;
 
 import java.time.Instant;
@@ -10,8 +11,12 @@ import java.util.Set;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
 
+import com.github.tomakehurst.wiremock.WireMockServer;
+import com.github.tomakehurst.wiremock.client.WireMock;
+
 import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.junit.QuarkusTest;
+import io.quarkus.test.oidc.server.OidcWireMock;
 import io.quarkus.test.oidc.server.OidcWiremockTestResource;
 import io.restassured.RestAssured;
 import io.smallrye.jwt.build.Jwt;
@@ -20,11 +25,14 @@ import io.smallrye.jwt.build.Jwt;
 @QuarkusTestResource(OidcWiremockTestResource.class)
 public class BearerTokenAuthorizationTest {
 
+    @OidcWireMock
+    WireMockServer wireMockServer;
+
     @Test
     public void testSecureAccessSuccessPreferredUsername() {
         for (String username : Arrays.asList("alice", "admin")) {
-            RestAssured.given().auth().oauth2(getAccessToken(username, new HashSet<>(Arrays.asList("user", "admin"))))
-                    .when().get("/api/users/preferredUserName")
+            RestAssured.given().auth().oauth2(getAccessToken(username, Set.of("user", "admin")))
+                    .when().get("/api/users/preferredUserName/bearer")
                     .then()
                     .statusCode(200)
                     .body("userName", equalTo(username));
@@ -33,17 +41,44 @@ public class BearerTokenAuthorizationTest {
 
     @Test
     public void testAccessAdminResource() {
-        RestAssured.given().auth().oauth2(getAccessToken("admin", new HashSet<>(Arrays.asList("admin"))))
-                .when().get("/api/admin")
+        RestAssured.given().auth().oauth2(getAccessToken("admin", Set.of("admin")))
+                .when().get("/api/admin/bearer")
                 .then()
                 .statusCode(200)
                 .body(Matchers.containsString("admin"));
     }
 
     @Test
+    public void testAccessAdminResourceWithCertThumbprint() {
+        RestAssured.given().auth().oauth2(getAccessTokenWithThumbprint("admin", Set.of("admin")))
+                .when().get("/api/admin/bearer-no-introspection")
+                .then()
+                .statusCode(200)
+                .body(Matchers.containsString("admin"));
+    }
+
+    @Test
+    public void testSecureAccessSuccessPreferredUsernameWrongRolePath() {
+        for (String username : Arrays.asList("alice", "admin")) {
+            RestAssured.given().auth().oauth2(getAccessToken(username, Set.of("user", "admin")))
+                    .when().get("/api/users/preferredUserName/bearer-wrong-role-path")
+                    .then()
+                    .statusCode(403);
+        }
+    }
+
+    @Test
+    public void testAccessAdminResourceWrongRolePath() {
+        RestAssured.given().auth().oauth2(getAccessToken("admin", Set.of("admin")))
+                .when().get("/api/admin/bearer-wrong-role-path")
+                .then()
+                .statusCode(403);
+    }
+
+    @Test
     public void testAccessAdminResourceAudienceArray() {
-        RestAssured.given().auth().oauth2(getAccessTokenAudienceArray("admin", new HashSet<>(Arrays.asList("admin"))))
-                .when().get("/api/admin")
+        RestAssured.given().auth().oauth2(getAccessTokenAudienceArray("admin", Set.of("admin")))
+                .when().get("/api/admin/bearer")
                 .then()
                 .statusCode(200)
                 .body(Matchers.containsString("admin"));
@@ -51,8 +86,8 @@ public class BearerTokenAuthorizationTest {
 
     @Test
     public void testDeniedAccessAdminResource() {
-        RestAssured.given().auth().oauth2(getAccessToken("alice", new HashSet<>(Arrays.asList("user"))))
-                .when().get("/api/admin")
+        RestAssured.given().auth().oauth2(getAccessToken("alice", Set.of("user")))
+                .when().get("/api/admin/bearer")
                 .then()
                 .statusCode(403);
     }
@@ -60,38 +95,55 @@ public class BearerTokenAuthorizationTest {
     @Test
     public void testDeniedNoBearerToken() {
         RestAssured.given()
-                .when().get("/api/users/me").then()
-                .statusCode(401);
+                .when().get("/api/users/me/bearer").then()
+                .statusCode(401)
+                .header("WWW-Authenticate", equalTo("Bearer"));
     }
 
     @Test
     public void testExpiredBearerToken() {
-        String token = getExpiredAccessToken("alice", new HashSet<>(Arrays.asList("user")));
+        String token = getExpiredAccessToken("alice", Set.of("user"));
 
         RestAssured.given().auth().oauth2(token).when()
-                .get("/api/users/me")
+                .get("/api/users/me/bearer")
                 .then()
-                .statusCode(401);
+                .statusCode(401)
+                .header("WWW-Authenticate", equalTo("Bearer"));
     }
 
     @Test
     public void testBearerTokenWrongIssuer() {
-        String token = getAccessTokenWrongIssuer("alice", new HashSet<>(Arrays.asList("user")));
+        String token = getAccessTokenWrongIssuer("alice", Set.of("user"));
 
         RestAssured.given().auth().oauth2(token).when()
-                .get("/api/users/me")
+                .get("/api/users/me/bearer")
                 .then()
-                .statusCode(401);
+                .statusCode(401)
+                .header("WWW-Authenticate", equalTo("Bearer"));
     }
 
     @Test
     public void testBearerTokenWrongAudience() {
-        String token = getAccessTokenWrongAudience("alice", new HashSet<>(Arrays.asList("user")));
+        String token = getAccessTokenWrongAudience("alice", Set.of("user"));
 
         RestAssured.given().auth().oauth2(token).when()
-                .get("/api/users/me")
+                .get("/api/users/me/bearer")
                 .then()
-                .statusCode(401);
+                .statusCode(401)
+                .header("WWW-Authenticate", equalTo("Bearer"));
+    }
+
+    @Test
+    public void testInvalidBearerToken() {
+        wireMockServer.stubFor(WireMock.post("/auth/realms/quarkus/protocol/openid-connect/token/introspect")
+                .withRequestBody(matching(".*token=invalid_token.*"))
+                .willReturn(WireMock.aResponse().withStatus(400)));
+
+        RestAssured.given().auth().oauth2("invalid_token").when()
+                .get("/api/users/me/bearer")
+                .then()
+                .statusCode(401)
+                .header("WWW-Authenticate", equalTo("Bearer"));
     }
 
     private String getAccessToken(String userName, Set<String> groups) {
@@ -99,9 +151,16 @@ public class BearerTokenAuthorizationTest {
                 .groups(groups)
                 .issuer("https://server.example.com")
                 .audience("https://service.example.com")
-                .jws()
-                .keyId("1")
                 .sign();
+    }
+
+    private String getAccessTokenWithThumbprint(String userName, Set<String> groups) {
+        return Jwt.preferredUserName(userName)
+                .groups(groups)
+                .issuer("https://server.example.com")
+                .audience("https://service.example.com")
+                .jws().thumbprint(OidcWiremockTestResource.getCertificate())
+                .sign("privateKeyWithoutKid.jwk");
     }
 
     private String getAccessTokenWrongAudience(String userName, Set<String> groups) {
@@ -109,8 +168,6 @@ public class BearerTokenAuthorizationTest {
                 .groups(groups)
                 .issuer("https://server.example.com")
                 .audience("https://services.com")
-                .jws()
-                .keyId("1")
                 .sign();
     }
 
@@ -119,8 +176,6 @@ public class BearerTokenAuthorizationTest {
                 .groups(groups)
                 .issuer("https://server.example.com")
                 .audience(new HashSet<>(Arrays.asList("https://service.example.com", "https://frontendservice.example.com")))
-                .jws()
-                .keyId("1")
                 .sign();
     }
 
@@ -130,8 +185,6 @@ public class BearerTokenAuthorizationTest {
                 .issuer("https://server.example.com")
                 .audience("https://service.example.com")
                 .expiresAt(Instant.MIN)
-                .jws()
-                .keyId("1")
                 .sign();
     }
 
@@ -140,8 +193,6 @@ public class BearerTokenAuthorizationTest {
                 .groups(groups)
                 .issuer("https://example.com")
                 .audience("https://service.example.com")
-                .jws()
-                .keyId("1")
                 .sign();
     }
 
