@@ -2,18 +2,27 @@ package io.quarkus.test.junit;
 
 import static io.quarkus.test.common.PathTestHelper.getAppClassLocationForTestLocation;
 import static io.quarkus.test.common.PathTestHelper.getTestClassesLocation;
+import static java.lang.ProcessBuilder.Redirect.DISCARD;
 
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.CodeSource;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
@@ -23,24 +32,36 @@ import java.util.stream.Collectors;
 import javax.enterprise.inject.Alternative;
 import javax.inject.Inject;
 
+import org.apache.commons.lang3.RandomStringUtils;
 import org.jboss.jandex.Index;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.platform.commons.JUnitException;
 
 import io.quarkus.bootstrap.BootstrapConstants;
+import io.quarkus.bootstrap.app.AugmentAction;
 import io.quarkus.bootstrap.app.CuratedApplication;
 import io.quarkus.bootstrap.app.QuarkusBootstrap;
-import io.quarkus.bootstrap.model.PathsCollection;
-import io.quarkus.bootstrap.resolver.model.QuarkusModel;
+import io.quarkus.bootstrap.model.ApplicationModel;
 import io.quarkus.bootstrap.utils.BuildToolHelper;
-import io.quarkus.datasource.deployment.spi.DevServicesDatasourceResultBuildItem;
+import io.quarkus.bootstrap.workspace.ArtifactSources;
+import io.quarkus.bootstrap.workspace.SourceDir;
+import io.quarkus.deployment.builditem.DevServicesLauncherConfigResultBuildItem;
+import io.quarkus.paths.PathList;
 import io.quarkus.runtime.configuration.ProfileManager;
+import io.quarkus.runtime.logging.LoggingSetupRecorder;
 import io.quarkus.test.common.ArtifactLauncher;
 import io.quarkus.test.common.PathTestHelper;
 import io.quarkus.test.common.TestClassIndexer;
+import io.quarkus.test.common.TestResourceManager;
 import io.quarkus.test.common.http.TestHTTPResourceManager;
 
-final class IntegrationTestUtil {
+public final class IntegrationTestUtil {
+
+    public static final int DEFAULT_PORT = 8081;
+    public static final int DEFAULT_HTTPS_PORT = 8444;
+    public static final long DEFAULT_WAIT_TIME_SECONDS = 60;
+
+    private static final String DOCKER_BINARY = "docker";
 
     private IntegrationTestUtil() {
     }
@@ -90,11 +111,12 @@ final class IntegrationTestUtil {
     }
 
     static TestProfileAndProperties determineTestProfileAndProperties(Class<? extends QuarkusTestProfile> profile,
-            Map<String, String> sysPropRestore) throws InstantiationException, IllegalAccessException {
+            Map<String, String> sysPropRestore)
+            throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         final Map<String, String> properties = new HashMap<>();
         QuarkusTestProfile testProfile = null;
         if (profile != null) {
-            testProfile = profile.newInstance();
+            testProfile = profile.getDeclaredConstructor().newInstance();
             properties.putAll(testProfile.getConfigOverrides());
             final Set<Class<?>> enabledAlternatives = testProfile.getEnabledAlternatives();
             if (!enabledAlternatives.isEmpty()) {
@@ -122,9 +144,41 @@ final class IntegrationTestUtil {
         return new TestProfileAndProperties(testProfile, properties);
     }
 
+    /**
+     * Since {@link TestResourceManager} is loaded from the ClassLoader passed in as an argument,
+     * we need to convert the user input {@link QuarkusTestProfile.TestResourceEntry} into instances of
+     * {@link TestResourceManager.TestResourceClassEntry}
+     * that are loaded from that ClassLoader
+     */
+    static <T> List<T> getAdditionalTestResources(
+            QuarkusTestProfile profileInstance, ClassLoader classLoader) {
+        if ((profileInstance == null) || profileInstance.testResources().isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        try {
+            Constructor<?> testResourceClassEntryConstructor = Class
+                    .forName(TestResourceManager.TestResourceClassEntry.class.getName(), true, classLoader)
+                    .getConstructor(Class.class, Map.class, Annotation.class, boolean.class);
+
+            List<QuarkusTestProfile.TestResourceEntry> testResources = profileInstance.testResources();
+            List<T> result = new ArrayList<>(testResources.size());
+            for (QuarkusTestProfile.TestResourceEntry testResource : testResources) {
+                T instance = (T) testResourceClassEntryConstructor.newInstance(
+                        Class.forName(testResource.getClazz().getName(), true, classLoader), testResource.getArgs(),
+                        null, testResource.isParallel());
+                result.add(instance);
+            }
+
+            return result;
+        } catch (Exception e) {
+            throw new IllegalStateException("Unable to handle profile " + profileInstance.getClass(), e);
+        }
+    }
+
     static void startLauncher(ArtifactLauncher launcher, Map<String, String> additionalProperties, Runnable sslSetter)
             throws IOException {
-        launcher.addSystemProperties(additionalProperties);
+        launcher.includeAsSysProps(additionalProperties);
         try {
             launcher.start();
         } catch (IOException e) {
@@ -141,12 +195,13 @@ final class IntegrationTestUtil {
         }
     }
 
-    static Map<String, String> handleDevDb(ExtensionContext context) throws Exception {
+    static ArtifactLauncher.InitContext.DevServicesLaunchResult handleDevServices(ExtensionContext context,
+            boolean isDockerAppLaunch) throws Exception {
         Class<?> requiredTestClass = context.getRequiredTestClass();
         Path testClassLocation = getTestClassesLocation(requiredTestClass);
         final Path appClassLocation = getAppClassLocationForTestLocation(testClassLocation.toString());
 
-        PathsCollection.Builder rootBuilder = PathsCollection.builder();
+        final PathList.Builder rootBuilder = PathList.builder();
 
         if (!appClassLocation.equals(testClassLocation)) {
             rootBuilder.add(testClassLocation);
@@ -160,7 +215,6 @@ final class IntegrationTestUtil {
         final QuarkusBootstrap.Builder runnerBuilder = QuarkusBootstrap.builder()
                 .setIsolateDeployment(true)
                 .setMode(QuarkusBootstrap.Mode.TEST);
-        QuarkusTestProfile profileInstance = null;
 
         final Path projectRoot = Paths.get("").normalize().toAbsolutePath();
         runnerBuilder.setProjectRoot(projectRoot);
@@ -181,14 +235,26 @@ final class IntegrationTestUtil {
         }
 
         // If gradle project running directly with IDE
-        if (System.getProperty(BootstrapConstants.SERIALIZED_APP_MODEL) == null) {
-            QuarkusModel model = BuildToolHelper.enableGradleAppModelForTest(projectRoot);
-            if (model != null) {
-                final Set<File> classDirectories = model.getWorkspace().getMainModule().getSourceSet()
-                        .getSourceDirectories();
-                for (File classes : classDirectories) {
-                    if (classes.exists() && !rootBuilder.contains(classes.toPath())) {
-                        rootBuilder.add(classes.toPath());
+        if (System.getProperty(BootstrapConstants.SERIALIZED_TEST_APP_MODEL) == null) {
+            ApplicationModel model = BuildToolHelper.enableGradleAppModelForTest(projectRoot);
+            if (model != null && model.getApplicationModule() != null) {
+                final ArtifactSources testSources = model.getApplicationModule().getTestSources();
+                if (testSources != null) {
+                    for (SourceDir src : testSources.getSourceDirs()) {
+                        if (!Files.exists(src.getOutputDir())) {
+                            final Path classes = src.getOutputDir();
+                            if (!rootBuilder.contains(classes)) {
+                                rootBuilder.add(classes);
+                            }
+                        }
+                    }
+                }
+                for (SourceDir src : model.getApplicationModule().getMainSources().getSourceDirs()) {
+                    if (!Files.exists(src.getOutputDir())) {
+                        final Path classes = src.getOutputDir();
+                        if (!rootBuilder.contains(classes)) {
+                            rootBuilder.add(classes);
+                        }
                     }
                 }
             }
@@ -213,23 +279,145 @@ final class IntegrationTestUtil {
         TestClassIndexer.writeIndex(testClassesIndex, requiredTestClass);
 
         Map<String, String> propertyMap = new HashMap<>();
-        curatedApplication
-                .createAugmentor()
-                .performCustomBuild(NativeDevServicesDatasourceHandler.class.getName(), new BiConsumer<String, String>() {
+        AugmentAction augmentAction;
+        String networkId = null;
+        if (isDockerAppLaunch) {
+            // when the application is going to be launched as a docker container, we need to make containers started by DevServices
+            // use a shared network that the application container can then use as well
+            augmentAction = curatedApplication.createAugmentor(
+                    "io.quarkus.deployment.builditem.DevServicesSharedNetworkBuildItem$Factory", Collections.emptyMap());
+        } else {
+            augmentAction = curatedApplication.createAugmentor();
+        }
+        augmentAction.performCustomBuild(NativeDevServicesHandler.class.getName(), new BiConsumer<String, String>() {
+            @Override
+            public void accept(String s, String s2) {
+                propertyMap.put(s, s2);
+            }
+        }, DevServicesLauncherConfigResultBuildItem.class.getName());
+
+        boolean manageNetwork = false;
+        if (isDockerAppLaunch) {
+            // obtain the ID of the shared network - this needs to be done after the augmentation has been run
+            // or else we run into various ClassLoader problems
+            try {
+                Class<?> networkClass = curatedApplication.getAugmentClassLoader()
+                        .loadClass("org.testcontainers.containers.Network");
+                Object sharedNetwork = networkClass.getField("SHARED").get(null);
+                networkId = (String) networkClass.getMethod("getId").invoke(sharedNetwork);
+            } catch (Exception e) {
+                networkId = "quarkus-integration-test-" + RandomStringUtils.random(5, true, false);
+                manageNetwork = true;
+            }
+        }
+
+        DefaultDevServicesLaunchResult result = new DefaultDevServicesLaunchResult(propertyMap, networkId, manageNetwork,
+                curatedApplication);
+        createNetworkIfNecessary(result);
+        return result;
+    }
+
+    // this probably isn't the best place for this method, but we need to create the docker container before
+    // user code is aware of the network
+    private static void createNetworkIfNecessary(
+            final ArtifactLauncher.InitContext.DevServicesLaunchResult devServicesLaunchResult) {
+        if (devServicesLaunchResult.manageNetwork() && (devServicesLaunchResult.networkId() != null)) {
+            try {
+                int networkCreateResult = new ProcessBuilder().redirectError(DISCARD).redirectOutput(DISCARD)
+                        .command(DOCKER_BINARY, "network", "create", devServicesLaunchResult.networkId()).start().waitFor();
+                if (networkCreateResult > 0) {
+                    throw new RuntimeException("Creating container network '" + devServicesLaunchResult.networkId()
+                            + "' completed unsuccessfully");
+                }
+                // do the cleanup in a shutdown hook because there might be more services (launched via QuarkusTestResourceLifecycleManager) connected to the network
+                Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
                     @Override
-                    public void accept(String s, String s2) {
-                        propertyMap.put(s, s2);
+                    public void run() {
+                        try {
+                            new ProcessBuilder().redirectError(DISCARD).redirectOutput(DISCARD)
+                                    .command(DOCKER_BINARY, "network", "rm", devServicesLaunchResult.networkId()).start()
+                                    .waitFor();
+                        } catch (InterruptedException | IOException ignored) {
+                            System.out.println(
+                                    "Unable to delete container network '" + devServicesLaunchResult.networkId() + "'");
+                        }
                     }
-                }, DevServicesDatasourceResultBuildItem.class.getName());
-        return propertyMap;
+                }));
+            } catch (Exception e) {
+                throw new RuntimeException("Creating container network '" + devServicesLaunchResult.networkId()
+                        + "' completed unsuccessfully");
+            }
+        }
+    }
+
+    static void activateLogging() {
+        // calling this method of the Recorder essentially sets up logging and configures most things
+        // based on the provided configuration
+
+        //we need to run this from the TCCL, as we want to activate it from
+        //inside the isolated CL, if one exists
+        ClassLoader cl = Thread.currentThread().getContextClassLoader();
+        try {
+            Class<?> lrs = cl.loadClass(LoggingSetupRecorder.class.getName());
+            lrs.getDeclaredMethod("handleFailedStart").invoke(null);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    static class DefaultDevServicesLaunchResult implements ArtifactLauncher.InitContext.DevServicesLaunchResult {
+        private final Map<String, String> properties;
+        private final String networkId;
+        private final boolean manageNetwork;
+        private final CuratedApplication curatedApplication;
+
+        DefaultDevServicesLaunchResult(Map<String, String> properties, String networkId,
+                boolean manageNetwork, CuratedApplication curatedApplication) {
+            this.properties = properties;
+            this.networkId = networkId;
+            this.manageNetwork = manageNetwork;
+            this.curatedApplication = curatedApplication;
+        }
+
+        public Map<String, String> properties() {
+            return properties;
+        }
+
+        public String networkId() {
+            return networkId;
+        }
+
+        @Override
+        public boolean manageNetwork() {
+            return manageNetwork;
+        }
+
+        @Override
+        public void close() {
+            curatedApplication.close();
+        }
     }
 
     static Properties readQuarkusArtifactProperties(ExtensionContext context) {
         Path buildOutputDirectory = determineBuildOutputDirectory(context);
         Path artifactProperties = buildOutputDirectory.resolve("quarkus-artifact.properties");
         if (!Files.exists(artifactProperties)) {
-            throw new IllegalStateException(
-                    "Unable to locate the artifact metadata file created that must be created by Quarkus in order to run integration tests.");
+            TestLauncher testLauncher = determineTestLauncher();
+            String errorMessage = "Unable to locate the artifact metadata file created that must be created by Quarkus in order to run integration tests. ";
+            if (testLauncher == TestLauncher.MAVEN) {
+                errorMessage += "Make sure this test is run after 'mvn package'. ";
+                if (context.getTestClass().isPresent()) {
+                    String testClassName = context.getTestClass().get().getName();
+                    if (testClassName.endsWith("Test")) {
+                        errorMessage += "The easiest way to ensure this is by having the 'maven-failsafe-plugin' run the test instead of the 'maven-surefire-plugin'.";
+                    }
+                }
+            } else if (testLauncher == TestLauncher.GRADLE) {
+                errorMessage += "Make sure this test is run after the 'quarkusBuild' Gradle task.";
+            } else {
+                errorMessage += "Make sure this test is run after the Quarkus artifact is built from your build tool.";
+            }
+            throw new IllegalStateException(errorMessage);
         }
         try {
             Properties properties = new Properties();
@@ -240,6 +428,33 @@ final class IntegrationTestUtil {
                     "Unable to read artifact metadata file created that must be created by Quarkus in order to run integration tests.",
                     e);
         }
+    }
+
+    private static TestLauncher determineTestLauncher() {
+        StackTraceElement[] stackTrace = Thread.currentThread().getStackTrace();
+        int i = stackTrace.length - 1;
+        TestLauncher testLauncher = TestLauncher.UNKNOWN;
+        while (true) {
+            StackTraceElement element = stackTrace[i--];
+            String className = element.getClassName();
+            if (className.startsWith("org.apache.maven")) {
+                testLauncher = TestLauncher.MAVEN;
+                break;
+            }
+            if (className.startsWith("org.gradle")) {
+                testLauncher = TestLauncher.GRADLE;
+            }
+            if (i == 0) {
+                break;
+            }
+        }
+        return testLauncher;
+    }
+
+    private enum TestLauncher {
+        MAVEN,
+        GRADLE,
+        UNKNOWN
     }
 
     static Path determineBuildOutputDirectory(ExtensionContext context) {
@@ -278,18 +493,28 @@ final class IntegrationTestUtil {
         }
         if (url.getProtocol().equals("file") && url.getPath().endsWith("test-classes/")) {
             //we have the maven test classes dir
-            File testClasses = new File(url.getPath());
-            return testClasses.getParentFile();
+            return toPath(url).getParent().toFile();
         } else if (url.getProtocol().equals("file") && url.getPath().endsWith("test/")) {
             //we have the gradle test classes dir, build/classes/java/test
-            File testClasses = new File(url.getPath());
-            return testClasses.getParentFile().getParentFile().getParentFile();
+            return toPath(url).getParent().getParent().getParent().toFile();
         } else if (url.getProtocol().equals("file") && url.getPath().contains("/target/surefire/")) {
             //this will make mvn failsafe:integration-test work
             String path = url.getPath();
             int index = path.lastIndexOf("/target/");
-            return new File(path.substring(0, index) + "/target/");
+            try {
+                return Paths.get(new URI("file:" + (path.substring(0, index) + "/target/"))).toFile();
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
+            }
         }
         return null;
+    }
+
+    private static Path toPath(URL url) {
+        try {
+            return Paths.get(url.toURI());
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
